--- a/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/01.md
+++ b/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/01.md
@@ -290,8 +290,8 @@ unicode_script = "devanagari"
 
 ज्ञाने मौनङ्, क्षमा शक्तौ,  
 त्यागे श्लाघा-विपर्ययः ।  
-गुणा गुणानुबन्धित्वात्  
-तस्य सप्रसवा इव ॥ २२ ॥    
+**गुणा** गुणानुबन्धित्वात्  
+तस्य **सप्रसवा** इव ॥ २२ ॥    
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/22.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
