--- a/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/02.md
+++ b/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/02.md
@@ -501,9 +501,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तदा प्रभृत्येव वनद्विपानान् त्रासार्थम् अस्मिन्नहम् अदिकुक्षौ ।  
-व्यापारितः शूलभृता विधाय सिंहत्वम् अङ्कागतसत्त्ववृत्ति ॥ ३८ ॥  
+व्यापारितः शूलभृता विधाय सिंहत्वम् अङ्कागतसत्त्ववृत्ति ॥ ३८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तदा प्रभृत्येव वनद्विपानान् त्रासार्थम् अस्मिन्नहम् अदिकुक्षौ ।  
+व्यापारितः शूलभृता विधाय सिंहत्वम् अङ्कागतसत्त्ववृत्ति ॥ ३८ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/38.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -512,9 +521,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तस्यालम् एषा क्षुधितस्य तृप्त्यै प्रदिष्टकाला परमेश्वरेण ।  
-उपस्थिता शोणितपारणा मे सुरद्विषश्चान्द्रमसी सुधेव ॥ ३९ ॥  
+उपस्थिता शोणितपारणा मे सुरद्विषश्चान्द्रमसी सुधेव ॥ ३९ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तस्यालम् एषा क्षुधितस्य तृप्त्यै प्रदिष्टकाला परमेश्वरेण ।  
+उपस्थिता शोणितपारणा मे सुरद्विषश्चान्द्रमसी सुधेव ॥ ३९ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/39.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -522,9 +540,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 स त्वन् निवर्तस्व विहाय लज्जाङ् गुरोर्भवान्दर्शितशिष्यभक्तिः ।  
-शस्त्रेण रक्ष्यय्ँ यदशक्यरक्षन् न तद्यशः शस्त्रभृताङ् क्षिणोति ॥ ४० ॥  
+शस्त्रेण रक्ष्यय्ँ यदशक्यरक्षन् न तद्यशः शस्त्रभृताङ् क्षिणोति ॥ ४० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+स त्वन् निवर्तस्व विहाय लज्जाङ् गुरोर्भवान्दर्शितशिष्यभक्तिः ।  
+शस्त्रेण रक्ष्यय्ँ यदशक्यरक्षन् न तद्यशः शस्त्रभृताङ् क्षिणोति ॥ ४० ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/40.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -532,9 +559,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 इति प्रगल्भम् पुरुसाधिराजो मृगाधिराजस्य वचो निशम्य ।  
-प्रत्याहतास्त्रो गिरिशप्रभावादात्मन्यवज्ञां शिथिलीचकार ॥ ४१ ॥  
+प्रत्याहतास्त्रो गिरिशप्रभावादात्मन्यवज्ञां शिथिलीचकार ॥ ४१ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+इति प्रगल्भम् पुरुसाधिराजो मृगाधिराजस्य वचो निशम्य ।  
+प्रत्याहतास्त्रो गिरिशप्रभावादात्मन्यवज्ञां शिथिलीचकार ॥ ४१ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/41.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -543,9 +579,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 प्रत्यब्रवीच्चैनम् इषुप्रयोगे तत्पूर्वसङ्गे वितथप्रयत्नः ।  
-जडीकृतस्त्र्यम्बकविक्षणेन वज्रम् मुमुक्षन्निव वज्रपाणिः ॥ ४२ ॥  
+जडीकृतस्त्र्यम्बकविक्षणेन वज्रम् मुमुक्षन्निव वज्रपाणिः ॥ ४२ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+प्रत्यब्रवीच्चैनम् इषुप्रयोगे तत्पूर्वसङ्गे वितथप्रयत्नः ।  
+जडीकृतस्त्र्यम्बकविक्षणेन वज्रम् मुमुक्षन्निव वज्रपाणिः ॥ ४२ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/42.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -553,12 +598,24 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 प्रत्याह वैनं शरमोक्षवन्ध्यो मा पत्त्रपर्वात्स्वरभेदम् आप्तः ।  
 प्रहीणपूर्वध्वनिनाधिरूढस्तुलाम् असारेन शरद्घनेन ॥ ४२* ॥
 
 सर्ँरुद्धचेष्टस्य हेतुः हास्यव्ँ वचस्तद्यदहव्ँ विवक्षुः ।  
-अन्तर्गतम् प्राणभृतां हि वेद सर्वम् भवान्भावम् अतोऽभिधास्ये ॥ ४३ ॥  
+अन्तर्गतम् प्राणभृतां हि वेद सर्वम् भवान्भावम् अतोऽभिधास्ये ॥ ४३ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+प्रत्याह वैनं शरमोक्षवन्ध्यो मा पत्त्रपर्वात्स्वरभेदम् आप्तः ।  
+प्रहीणपूर्वध्वनिनाधिरूढस्तुलाम् असारेन शरद्घनेन ॥ ४२* ॥
+
+सर्ँरुद्धचेष्टस्य हेतुः हास्यव्ँ वचस्तद्यदहव्ँ विवक्षुः ।  
+अन्तर्गतम् प्राणभृतां हि वेद सर्वम् भवान्भावम् अतोऽभिधास्ये ॥ ४३ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/43.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -566,9 +623,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 मान्यः स मे स्थावरजङ्गमानां सर्गस्थितिप्रत्यवहारहेतुः ।  
-गुरोरपीदन् धनम् आहिताग्नेर्नश्यत्पुरस्तादनुपेक्षणीयम् ॥ ४४ ॥  
+गुरोरपीदन् धनम् आहिताग्नेर्नश्यत्पुरस्तादनुपेक्षणीयम् ॥ ४४ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+मान्यः स मे स्थावरजङ्गमानां सर्गस्थितिप्रत्यवहारहेतुः ।  
+गुरोरपीदन् धनम् आहिताग्नेर्नश्यत्पुरस्तादनुपेक्षणीयम् ॥ ४४ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/44.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -576,9 +642,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 स त्वम् मदीयेन शरीरवृत्तिन् देहेन निर्वर्तयितुम् प्रसीद ।  
-दिनावसानोत्सुकबालवत्सा विसृज्यतान् धेनुरियम् महर्षेः ॥ ४५ ॥  
+दिनावसानोत्सुकबालवत्सा विसृज्यतान् धेनुरियम् महर्षेः ॥ ४५ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+स त्वम् मदीयेन शरीरवृत्तिन् देहेन निर्वर्तयितुम् प्रसीद ।  
+दिनावसानोत्सुकबालवत्सा विसृज्यतान् धेनुरियम् महर्षेः ॥ ४५ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/45.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -587,9 +662,18 @@ unicode_script = "devanagari"
 </div>
 <div caption="वेदभूमिपाठः" class="audioEmbed" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga02-46-55.mp3"></div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 अथान्धकारङ् गिरिगह्वराणान् दंष्ट्रामयूखैः शकलानि कुर्वन् ।  
-भूयः स भूतेश्वरपार्श्ववर्ती किञ्चिद्विहस्यार्थपतिम् बभाषे ॥ ४६ ॥  
+भूयः स भूतेश्वरपार्श्ववर्ती किञ्चिद्विहस्यार्थपतिम् बभाषे ॥ ४६ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+अथान्धकारङ् गिरिगह्वराणान् दंष्ट्रामयूखैः शकलानि कुर्वन् ।  
+भूयः स भूतेश्वरपार्श्ववर्ती किञ्चिद्विहस्यार्थपतिम् बभाषे ॥ ४६ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/46.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -597,9 +681,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 एकातपत्रञ् जगतः प्रभुत्वन् नवय्ँ ययः कान्तम् इदव्ँ वपुश्च ।  
-अल्पस्य हेतोर्बहु हातुम् इच्छन्विचारमूधः प्रतिभासि मे त्वम् ॥ ४७ ॥  
+अल्पस्य हेतोर्बहु हातुम् इच्छन्विचारमूधः प्रतिभासि मे त्वम् ॥ ४७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+एकातपत्रञ् जगतः प्रभुत्वन् नवय्ँ ययः कान्तम् इदव्ँ वपुश्च ।  
+अल्पस्य हेतोर्बहु हातुम् इच्छन्विचारमूधः प्रतिभासि मे त्वम् ॥ ४७ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/47.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -607,9 +700,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 भूतानुकम्पा तव चेदियङ् गौरेका भवेत्स्वस्तिमती त्वदन्ते ।  
-जीवन्पुनः शश्वदुपप्लवेभ्यः प्रजाः प्रजानाथ पितेव पासि ॥ ४८ ॥  
+जीवन्पुनः शश्वदुपप्लवेभ्यः प्रजाः प्रजानाथ पितेव पासि ॥ ४८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+भूतानुकम्पा तव चेदियङ् गौरेका भवेत्स्वस्तिमती त्वदन्ते ।  
+जीवन्पुनः शश्वदुपप्लवेभ्यः प्रजाः प्रजानाथ पितेव पासि ॥ ४८ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/48.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -617,9 +719,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 अथैकधेनोरपराधचण्डाद्गुरोः कृषानुप्रतिमाद्बिभेषि ।  
-शक्योऽस्य मन्युर्भवता विनेतुङ् गाः कोटिशः स्पर्शयता घटोध्नीः ॥ ४९ ॥  
+शक्योऽस्य मन्युर्भवता विनेतुङ् गाः कोटिशः स्पर्शयता घटोध्नीः ॥ ४९ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+अथैकधेनोरपराधचण्डाद्गुरोः कृषानुप्रतिमाद्बिभेषि ।  
+शक्योऽस्य मन्युर्भवता विनेतुङ् गाः कोटिशः स्पर्शयता घटोध्नीः ॥ ४९ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/49.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -627,9 +738,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तद्रक्ष कल्याणपरम्पराणाम् भोक्तारम् ऊर्जस्वलम् आत्मदेहम् ।  
-महीतलस्पर्शनमात्रभिन्नम् ऋद्धं हि राज्यम् पदम् ऐन्द्रम् आहुः ॥ ५० ॥  
+महीतलस्पर्शनमात्रभिन्नम् ऋद्धं हि राज्यम् पदम् ऐन्द्रम् आहुः ॥ ५० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तद्रक्ष कल्याणपरम्पराणाम् भोक्तारम् ऊर्जस्वलम् आत्मदेहम् ।  
+महीतलस्पर्शनमात्रभिन्नम् ऋद्धं हि राज्यम् पदम् ऐन्द्रम् आहुः ॥ ५० ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/50.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -637,9 +757,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 एतावदुक्त्वा विरते मृगेन्द्रे प्रतिस्वनेनास्य गुहागतेन ।  
-शिलोच्चयोऽपि क्षितिपालम् उच्चैः प्रीत्या तम् एवार्थम् अभाषतेव ॥ ५१ ॥  
+शिलोच्चयोऽपि क्षितिपालम् उच्चैः प्रीत्या तम् एवार्थम् अभाषतेव ॥ ५१ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+एतावदुक्त्वा विरते मृगेन्द्रे प्रतिस्वनेनास्य गुहागतेन ।  
+शिलोच्चयोऽपि क्षितिपालम् उच्चैः प्रीत्या तम् एवार्थम् अभाषतेव ॥ ५१ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/51.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -647,9 +776,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 निशम्य देवानुचरस्य वाचम् मनुष्यदेवः पुनरप्युवाच ।  
-धेन्वा तदध्यासितकातराक्ष्या निरीक्ष्यमाणः सुतरान् दयालुः ॥ ५२ ॥  
+धेन्वा तदध्यासितकातराक्ष्या निरीक्ष्यमाणः सुतरान् दयालुः ॥ ५२ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+निशम्य देवानुचरस्य वाचम् मनुष्यदेवः पुनरप्युवाच ।  
+धेन्वा तदध्यासितकातराक्ष्या निरीक्ष्यमाणः सुतरान् दयालुः ॥ ५२ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/52.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -657,9 +795,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 क्षतात्किल त्रायत इत्युदग्रः क्षत्रस्य शब्दो भुवनेषु रूढः ।  
-राज्येन किन् तद्विपरीतवृत्तेः प्राणैरुपक्रोशमलीमसैर्वा ॥ ५३ ॥  
+राज्येन किन् तद्विपरीतवृत्तेः प्राणैरुपक्रोशमलीमसैर्वा ॥ ५३ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+क्षतात्किल त्रायत इत्युदग्रः क्षत्रस्य शब्दो भुवनेषु रूढः ।  
+राज्येन किन् तद्विपरीतवृत्तेः प्राणैरुपक्रोशमलीमसैर्वा ॥ ५३ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/53.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -667,9 +814,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 कथन् नु शक्योऽनुनयो महर्षेर्विश्राणनाच्चान्यपयस्विनीनम्।  
-इमाम् अनूनां सुरभेरवेहि रुद्रौजसा तु पहृतन् त्वयास्याम् ॥ ५४ ॥  
+इमाम् अनूनां सुरभेरवेहि रुद्रौजसा तु पहृतन् त्वयास्याम् ॥ ५४ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+कथन् नु शक्योऽनुनयो महर्षेर्विश्राणनाच्चान्यपयस्विनीनम्।  
+इमाम् अनूनां सुरभेरवेहि रुद्रौजसा तु पहृतन् त्वयास्याम् ॥ ५४ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/54.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -677,9 +833,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 सेयं स्वदेहार्पणनिष्क्रयेण न्याय्या मया मोचयितुम् भवत्तः ।  
-न पारणा स्याद्विहता तवैवम् भवेदलुप्तश्च मुनेः क्रियार्थः ॥ ५५ ॥  
+न पारणा स्याद्विहता तवैवम् भवेदलुप्तश्च मुनेः क्रियार्थः ॥ ५५ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+सेयं स्वदेहार्पणनिष्क्रयेण न्याय्या मया मोचयितुम् भवत्तः ।  
+न पारणा स्याद्विहता तवैवम् भवेदलुप्तश्च मुनेः क्रियार्थः ॥ ५५ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/55.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -688,9 +853,18 @@ unicode_script = "devanagari"
 </div>
 <div caption="वेदभूमिपाठः" class="audioEmbed" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga02-56-75.mp3"></div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 भवानपीदम् परवानवैति महान्हि यत्नस्तव देवदारौ ।  
-स्थातुन् नियोक्तुर्न हि शक्यम् अग्रे विनाश्य रक्ष्यं स्वयम् अक्षतेन ॥ ५६ ॥  
+स्थातुन् नियोक्तुर्न हि शक्यम् अग्रे विनाश्य रक्ष्यं स्वयम् अक्षतेन ॥ ५६ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+भवानपीदम् परवानवैति महान्हि यत्नस्तव देवदारौ ।  
+स्थातुन् नियोक्तुर्न हि शक्यम् अग्रे विनाश्य रक्ष्यं स्वयम् अक्षतेन ॥ ५६ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/56.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -698,9 +872,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 किम् अप्यहिंस्यस्तव चेन्मतोऽहय्ँ यशःशरीरे भव मे दयालुः ।  
-एकान्तविधंसिषु मद्विधानाम् पिण्डेष्वनास्था खलु भौतिकेषु ॥ ५७ ॥  
+एकान्तविधंसिषु मद्विधानाम् पिण्डेष्वनास्था खलु भौतिकेषु ॥ ५७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+किम् अप्यहिंस्यस्तव चेन्मतोऽहय्ँ यशःशरीरे भव मे दयालुः ।  
+एकान्तविधंसिषु मद्विधानाम् पिण्डेष्वनास्था खलु भौतिकेषु ॥ ५७ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/57.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -708,9 +891,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 सम्बन्धम् आभाषणपूर्वम् आहुर्वृत्तः स नौ सङ्गतयोर्वनान्ते ।  
-तद्भूतनाथानुग नार्हसि त्वं सम्बन्धिनो मे प्रणयव्ँ विहन्तुम् ॥ ५८ ॥  
+तद्भूतनाथानुग नार्हसि त्वं सम्बन्धिनो मे प्रणयव्ँ विहन्तुम् ॥ ५८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+सम्बन्धम् आभाषणपूर्वम् आहुर्वृत्तः स नौ सङ्गतयोर्वनान्ते ।  
+तद्भूतनाथानुग नार्हसि त्वं सम्बन्धिनो मे प्रणयव्ँ विहन्तुम् ॥ ५८ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/58.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -718,9 +910,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तथेति गाम् उक्तवते दिलीपः सद्यः प्रतिष्टम्भविमुक्तबाहुः ।  
-स न्यस्त शस्त्रो हरये स्वदेहम् उपानयत्पिण्डम् इवामिषस्य ॥ ५९ ॥  
+स न्यस्त शस्त्रो हरये स्वदेहम् उपानयत्पिण्डम् इवामिषस्य ॥ ५९ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तथेति गाम् उक्तवते दिलीपः सद्यः प्रतिष्टम्भविमुक्तबाहुः ।  
+स न्यस्त शस्त्रो हरये स्वदेहम् उपानयत्पिण्डम् इवामिषस्य ॥ ५९ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/59.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -728,9 +929,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तस्मिन्क्षणे पालयितुः प्रजानाम् उत्पश्यतः सिंहनिपातम् उग्रम् ।  
-अवाङ्मुखस्य्ऽओपरि पुष्पवृष्टिः पपात विद्याधरहस्तमुक्ता ॥ ६० ॥  
+अवाङ्मुखस्य्ऽओपरि पुष्पवृष्टिः पपात विद्याधरहस्तमुक्ता ॥ ६० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तस्मिन्क्षणे पालयितुः प्रजानाम् उत्पश्यतः सिंहनिपातम् उग्रम् ।  
+अवाङ्मुखस्य्ऽओपरि पुष्पवृष्टिः पपात विद्याधरहस्तमुक्ता ॥ ६० ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/60.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -738,9 +948,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 उत्तिष्ठ वत्सेत्यमृतायमानव्ँ वचो निशम्योत्थितम् उत्थितः सन् ।  
-ददर्श राजा जननीम् इव स्वाङ् गाम् अग्रतः प्रस्रविणीन् न सिंहम् ॥ ६१ ॥  
+ददर्श राजा जननीम् इव स्वाङ् गाम् अग्रतः प्रस्रविणीन् न सिंहम् ॥ ६१ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+उत्तिष्ठ वत्सेत्यमृतायमानव्ँ वचो निशम्योत्थितम् उत्थितः सन् ।  
+ददर्श राजा जननीम् इव स्वाङ् गाम् अग्रतः प्रस्रविणीन् न सिंहम् ॥ ६१ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/61.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -748,9 +967,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तव्ँ विस्मितन् धेनुरुवाच साधो मायाम् मयोध्भाव्य परीक्षितोऽसि ।  
-ऋषिप्रभावान्मयि नान्तकोऽपि प्रभुः प्रहर्तुङ् किम् उतान्यहिंस्राः ॥ ६२ ॥  
+ऋषिप्रभावान्मयि नान्तकोऽपि प्रभुः प्रहर्तुङ् किम् उतान्यहिंस्राः ॥ ६२ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तव्ँ विस्मितन् धेनुरुवाच साधो मायाम् मयोध्भाव्य परीक्षितोऽसि ।  
+ऋषिप्रभावान्मयि नान्तकोऽपि प्रभुः प्रहर्तुङ् किम् उतान्यहिंस्राः ॥ ६२ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/62.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -758,9 +986,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 भक्त्या गुरौ मय्यनुकम्पाय च प्रीतास्मि ते पुत्र वरव्ँ वृणीष्व ।  
-न केवलानाम् पयसाम् प्रसूतिम् अवेहि माङ् कामदुघाम् प्रसन्नाम् ॥ ६३ ॥  
+न केवलानाम् पयसाम् प्रसूतिम् अवेहि माङ् कामदुघाम् प्रसन्नाम् ॥ ६३ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+भक्त्या गुरौ मय्यनुकम्पाय च प्रीतास्मि ते पुत्र वरव्ँ वृणीष्व ।  
+न केवलानाम् पयसाम् प्रसूतिम् अवेहि माङ् कामदुघाम् प्रसन्नाम् ॥ ६३ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/63.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -768,9 +1005,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 ततः समानीय समानितार्थी हस्तौ स्वहस्तार्जितवीरशब्दः ।  
-वंशस्य कर्तारम् अनन्तकीर्तिं सुदक्षिणायान् तनयय्ँ ययाचे ॥ ६४ ॥  
+वंशस्य कर्तारम् अनन्तकीर्तिं सुदक्षिणायान् तनयय्ँ ययाचे ॥ ६४ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+ततः समानीय समानितार्थी हस्तौ स्वहस्तार्जितवीरशब्दः ।  
+वंशस्य कर्तारम् अनन्तकीर्तिं सुदक्षिणायान् तनयय्ँ ययाचे ॥ ६४ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/64.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -778,9 +1024,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 सन्तानकामाय तथेति कामर्ँ राज्ञे प्रतिश्रुत्य पयस्विनी सा ।  
-दुग्ध्वा पयः पत्त्रपुटे मदीयम् पुत्र्ऽ ओपभुङ्क्ष्व्ऽ एति तम् आदिदेश ॥ ६५ ॥  
+दुग्ध्वा पयः पत्त्रपुटे मदीयम् पुत्र्ऽ ओपभुङ्क्ष्व्ऽ एति तम् आदिदेश ॥ ६५ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+सन्तानकामाय तथेति कामर्ँ राज्ञे प्रतिश्रुत्य पयस्विनी सा ।  
+दुग्ध्वा पयः पत्त्रपुटे मदीयम् पुत्र्ऽ ओपभुङ्क्ष्व्ऽ एति तम् आदिदेश ॥ ६५ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/65.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -788,9 +1043,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 वत्सस्य ह्ॐआर्थविधेश्च शेषम् ऋषेरनुज्ञाम् अधिगम्य मातः ।  
-ऊधस्यम् इच्छामि तवोपभोक्तुम्यं षष्ठाम्शम् उर्व्या इव रक्षितायाः ॥ ६६ ॥  
+ऊधस्यम् इच्छामि तवोपभोक्तुम्यं षष्ठाम्शम् उर्व्या इव रक्षितायाः ॥ ६६ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+वत्सस्य ह्ॐआर्थविधेश्च शेषम् ऋषेरनुज्ञाम् अधिगम्य मातः ।  
+ऊधस्यम् इच्छामि तवोपभोक्तुम्यं षष्ठाम्शम् उर्व्या इव रक्षितायाः ॥ ६६ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/66.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -798,9 +1062,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 इत्थङ् क्षितीशेन वसिष्ठधेनुर्विज्ञापिता प्रीततरा बभूव ।  
-तदन्विता हैमवताच्च कुक्षेः प्रत्याययावाश्रमम् अश्रमेण ॥ ६७ ॥  
+तदन्विता हैमवताच्च कुक्षेः प्रत्याययावाश्रमम् अश्रमेण ॥ ६७ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+इत्थङ् क्षितीशेन वसिष्ठधेनुर्विज्ञापिता प्रीततरा बभूव ।  
+तदन्विता हैमवताच्च कुक्षेः प्रत्याययावाश्रमम् अश्रमेण ॥ ६७ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/67.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -808,9 +1081,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तस्याः प्रसन्नेन्दुमुखः प्रसादङ् गुरुर्नृपाणाङ् गुरवे निवेद्य ।  
-प्रहर्षचिह्नानुमितम् प्रियायै शशंस वाचा पुनरुक्तयेव ॥ ६८ ॥  
+प्रहर्षचिह्नानुमितम् प्रियायै शशंस वाचा पुनरुक्तयेव ॥ ६८ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तस्याः प्रसन्नेन्दुमुखः प्रसादङ् गुरुर्नृपाणाङ् गुरवे निवेद्य ।  
+प्रहर्षचिह्नानुमितम् प्रियायै शशंस वाचा पुनरुक्तयेव ॥ ६८ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/68.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -818,9 +1100,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 स नन्दिनीस्तन्यम् अनिन्दितात्मा सद्वत्सलो वत्सहुतावशेषम् ।  
-पपौ वसिष्ठेन कृताभ्यनुज्ञः शुभ्रय्ँ यशो मूर्तम् इवातितृष्णः ॥ ६९ ॥  
+पपौ वसिष्ठेन कृताभ्यनुज्ञः शुभ्रय्ँ यशो मूर्तम् इवातितृष्णः ॥ ६९ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+स नन्दिनीस्तन्यम् अनिन्दितात्मा सद्वत्सलो वत्सहुतावशेषम् ।  
+पपौ वसिष्ठेन कृताभ्यनुज्ञः शुभ्रय्ँ यशो मूर्तम् इवातितृष्णः ॥ ६९ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/69.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -828,9 +1119,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 प्रातर्यथोक्तव्रतपारणान्ते प्रास्थानिकं स्वस्त्ययनम् प्रयुज ।  
-तौ दम्पती स्वाम् प्रति राजधानीम् प्रस्थापयाम् आस वशी वसिष्ठः ॥ ७० ॥  
+तौ दम्पती स्वाम् प्रति राजधानीम् प्रस्थापयाम् आस वशी वसिष्ठः ॥ ७० ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+प्रातर्यथोक्तव्रतपारणान्ते प्रास्थानिकं स्वस्त्ययनम् प्रयुज ।  
+तौ दम्पती स्वाम् प्रति राजधानीम् प्रस्थापयाम् आस वशी वसिष्ठः ॥ ७० ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/70.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -838,9 +1138,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 प्रदक्षिणीकृत्य हुतं हुताशम् अनन्तरम् भर्तुररुन्धतीञ् च ।  
-धेनुं सवत्साञ् च नृपः प्रतस्थे सन्मङ्गलोदग्रतरप्रभावः ॥ ७१ ॥  
+धेनुं सवत्साञ् च नृपः प्रतस्थे सन्मङ्गलोदग्रतरप्रभावः ॥ ७१ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+प्रदक्षिणीकृत्य हुतं हुताशम् अनन्तरम् भर्तुररुन्धतीञ् च ।  
+धेनुं सवत्साञ् च नृपः प्रतस्थे सन्मङ्गलोदग्रतरप्रभावः ॥ ७१ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/71.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -848,9 +1157,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 श्रोताभिरामध्वनिना रथेन स धर्मपत्नीसहितः सहिष्णुः ।  
-ययावनुद्घातसुखेन मार्गं स्वेनेव पूर्णेन मनोरथेन ॥ ७२ ॥  
+ययावनुद्घातसुखेन मार्गं स्वेनेव पूर्णेन मनोरथेन ॥ ७२ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+श्रोताभिरामध्वनिना रथेन स धर्मपत्नीसहितः सहिष्णुः ।  
+ययावनुद्घातसुखेन मार्गं स्वेनेव पूर्णेन मनोरथेन ॥ ७२ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/72.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -858,9 +1176,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तम् आहितौत्सुक्यम् अदर्शनेन प्रजाः प्रजार्थव्रतकर्शिताङ्गम् ।  
-नेत्रैः पपुस्तृप्तिम् अनाप्नुवद्भिर्नवोदयन् नाथम् इवौषधीनाम् ॥ ७३ ॥  
+नेत्रैः पपुस्तृप्तिम् अनाप्नुवद्भिर्नवोदयन् नाथम् इवौषधीनाम् ॥ ७३ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तम् आहितौत्सुक्यम् अदर्शनेन प्रजाः प्रजार्थव्रतकर्शिताङ्गम् ।  
+नेत्रैः पपुस्तृप्तिम् अनाप्नुवद्भिर्नवोदयन् नाथम् इवौषधीनाम् ॥ ७३ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/73.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -868,9 +1195,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 पुरन्दरश्रीः पुरम् उत्पताकम् प्रविश्य पौरैरभिनन्द्यमानः ।  
-भुजे भुअङ्गेन्द्रसमानसारे भूयः स भूमेर्धुरम् आससञ्ज ॥ ७४ ॥  
+भुजे भुअङ्गेन्द्रसमानसारे भूयः स भूमेर्धुरम् आससञ्ज ॥ ७४ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+पुरन्दरश्रीः पुरम् उत्पताकम् प्रविश्य पौरैरभिनन्द्यमानः ।  
+भुजे भुअङ्गेन्द्रसमानसारे भूयः स भूमेर्धुरम् आससञ्ज ॥ ७४ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/74.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -878,9 +1214,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 अथ नयनसमुत्थञ् ज्योतिरत्रेरिव द्यौः सुरसरिदिव तेजो वह्निनिष्ठ्यूतम् ऐशम् ।  
-नरपतिकुलभूत्यै गर्भम् आधत्त राज्ञी गुरुभिरभिनिविष्टल्ँ लोकपालानुभावैः ॥ ७५ ॥  
+नरपतिकुलभूत्यै गर्भम् आधत्त राज्ञी गुरुभिरभिनिविष्टल्ँ लोकपालानुभावैः ॥ ७५ ॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+अथ नयनसमुत्थञ् ज्योतिरत्रेरिव द्यौः सुरसरिदिव तेजो वह्निनिष्ठ्यूतम् ऐशम् ।  
+नरपतिकुलभूत्यै गर्भम् आधत्त राज्ञी गुरुभिरभिनिविष्टल्ँ लोकपालानुभावैः ॥ ७५ ॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/75.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
