--- a/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/18.md
+++ b/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/18.md
@@ -5,8 +5,16 @@ unicode_script = "devanagari"
 +++
 <div caption="वेदभूमिपाठः" class="audioEmbed" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga18-01-20.mp3"></div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 स नैषधस्यार्थपतेः सुतायामुत्पादयामास निषिद्धशत्रुः ।  
-अनूनसारं निषधान्नगेन्द्रात्पुत्रं यमाहुर्निषधाख्यमेव ॥ १॥  
+अनूनसारं निषधान्नगेन्द्रात्पुत्रं यमाहुर्निषधाख्यमेव ॥ १॥
+</details>
+<details><summary>मूलम्</summary>
+
+स नैषधस्यार्थपतेः सुतायामुत्पादयामास निषिद्धशत्रुः ।  
+अनूनसारं निषधान्नगेन्द्रात्पुत्रं यमाहुर्निषधाख्यमेव ॥ १॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/01.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -14,9 +22,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तेनोनुवीर्येण पिता प्रजायै कल्पिष्यमाणेन ननन्द यूना ।  
-सुवृष्टियोगादिव जीवलोकः सस्येन संपत्तिफलोन्मुखेन ॥ २॥  
+सुवृष्टियोगादिव जीवलोकः सस्येन संपत्तिफलोन्मुखेन ॥ २॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तेनोनुवीर्येण पिता प्रजायै कल्पिष्यमाणेन ननन्द यूना ।  
+सुवृष्टियोगादिव जीवलोकः सस्येन संपत्तिफलोन्मुखेन ॥ २॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/02.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -24,9 +41,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 शब्दादि निर्विश्य सुखं चिराय तस्मिन्प्रतिष्ठापितराजशब्दः ।  
-कौमुद्वतेयः कुमुदावदातैर्द्यामर्जितां कर्मभिरारुरोह ॥ ३॥  
+कौमुद्वतेयः कुमुदावदातैर्द्यामर्जितां कर्मभिरारुरोह ॥ ३॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+शब्दादि निर्विश्य सुखं चिराय तस्मिन्प्रतिष्ठापितराजशब्दः ।  
+कौमुद्वतेयः कुमुदावदातैर्द्यामर्जितां कर्मभिरारुरोह ॥ ३॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/03.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -34,9 +60,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 पौत्रः कुशस्यापि कुशेशयाक्षः ससागरां सागरधीरचेताः ।  
-एकातपत्रां भुवमेकवीरः पुरार्गलादीर्घभुजो बुभोज ॥ ४॥  
+एकातपत्रां भुवमेकवीरः पुरार्गलादीर्घभुजो बुभोज ॥ ४॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+पौत्रः कुशस्यापि कुशेशयाक्षः ससागरां सागरधीरचेताः ।  
+एकातपत्रां भुवमेकवीरः पुरार्गलादीर्घभुजो बुभोज ॥ ४॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/04.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -44,9 +79,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तस्यानलौजास्तनयस्तदन्ते वंशश्रियं प्राप नलाभिधानः ।  
-यो नड्वलानीव गजः परेषां बलान्यमृद्गान्नलिनाभवक्त्रः ॥ ५॥  
+यो नड्वलानीव गजः परेषां बलान्यमृद्गान्नलिनाभवक्त्रः ॥ ५॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तस्यानलौजास्तनयस्तदन्ते वंशश्रियं प्राप नलाभिधानः ।  
+यो नड्वलानीव गजः परेषां बलान्यमृद्गान्नलिनाभवक्त्रः ॥ ५॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/05.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -54,9 +98,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 नभश्चरैर्गीतयशाः स लेभे नभस्तलश्यामतनुं तनूजम् ।  
-ख्यातं नभःशब्दमयेन नाम्ना कान्तं नभोमासमिव प्रजानाम् ॥ ६॥  
+ख्यातं नभःशब्दमयेन नाम्ना कान्तं नभोमासमिव प्रजानाम् ॥ ६॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+नभश्चरैर्गीतयशाः स लेभे नभस्तलश्यामतनुं तनूजम् ।  
+ख्यातं नभःशब्दमयेन नाम्ना कान्तं नभोमासमिव प्रजानाम् ॥ ६॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/06.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -64,9 +117,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तस्मै विसृज्योत्तरकोसलानां धर्मोत्तरस्तत्प्रभवे प्रभुत्वम् ।  
-मृगैरजर्यं जरसोपदिष्टमदेहबन्धाय पुनर्बबन्ध ॥ ७॥  
+मृगैरजर्यं जरसोपदिष्टमदेहबन्धाय पुनर्बबन्ध ॥ ७॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तस्मै विसृज्योत्तरकोसलानां धर्मोत्तरस्तत्प्रभवे प्रभुत्वम् ।  
+मृगैरजर्यं जरसोपदिष्टमदेहबन्धाय पुनर्बबन्ध ॥ ७॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/07.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -74,9 +136,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तेन द्विपानामिव पुण्डरीको राज्ञामजय्योऽजनि पुण्डरीकः ।  
-शान्ते पितर्याहृतपुण्डरीका यं पुण्डरीकाक्षमिव श्रिता श्रीः ॥ ८॥  
+शान्ते पितर्याहृतपुण्डरीका यं पुण्डरीकाक्षमिव श्रिता श्रीः ॥ ८॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तेन द्विपानामिव पुण्डरीको राज्ञामजय्योऽजनि पुण्डरीकः ।  
+शान्ते पितर्याहृतपुण्डरीका यं पुण्डरीकाक्षमिव श्रिता श्रीः ॥ ८॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/08.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -84,9 +155,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 स क्षेमधन्वानममोघधन्वा पुत्रं प्रजाक्षेमविधानदक्षम् ।  
-क्ष्मां लम्भयित्वा क्षमयोपपन्नं वने तपः क्षान्ततरश्चचार ॥ ९॥  
+क्ष्मां लम्भयित्वा क्षमयोपपन्नं वने तपः क्षान्ततरश्चचार ॥ ९॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+स क्षेमधन्वानममोघधन्वा पुत्रं प्रजाक्षेमविधानदक्षम् ।  
+क्ष्मां लम्भयित्वा क्षमयोपपन्नं वने तपः क्षान्ततरश्चचार ॥ ९॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/09.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -94,9 +174,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 अनीकिनीनां समरेऽग्रयायी तस्यापि देवप्रतिमः सुतोऽभूत् ।  
-व्यश्रूयतानीकपदावसानं देवादि नाम त्रिदिवेऽपि यस्य ॥ १०॥  
+व्यश्रूयतानीकपदावसानं देवादि नाम त्रिदिवेऽपि यस्य ॥ १०॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+अनीकिनीनां समरेऽग्रयायी तस्यापि देवप्रतिमः सुतोऽभूत् ।  
+व्यश्रूयतानीकपदावसानं देवादि नाम त्रिदिवेऽपि यस्य ॥ १०॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/10.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -104,9 +193,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 पिता समाराधनतत्परेण पुत्रेण पुत्री स यथैव तेन ।  
-पुत्रस्तथैवात्मजवत्सलेन स तेन पित्रा पितृमान्बभूव ॥ ११॥  
+पुत्रस्तथैवात्मजवत्सलेन स तेन पित्रा पितृमान्बभूव ॥ ११॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+पिता समाराधनतत्परेण पुत्रेण पुत्री स यथैव तेन ।  
+पुत्रस्तथैवात्मजवत्सलेन स तेन पित्रा पितृमान्बभूव ॥ ११॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/11.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -114,9 +212,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 पूर्वस्तयोरात्मसमे चिरोढामात्मोभवे वर्णचतुष्टयस्य ।  
-धुरं निधायैकनिधिर्गुणानां जगाम यज्वा यजमानलोकम् ॥ १२॥  
+धुरं निधायैकनिधिर्गुणानां जगाम यज्वा यजमानलोकम् ॥ १२॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+पूर्वस्तयोरात्मसमे चिरोढामात्मोभवे वर्णचतुष्टयस्य ।  
+धुरं निधायैकनिधिर्गुणानां जगाम यज्वा यजमानलोकम् ॥ १२॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/12.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -124,9 +231,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 वशी सुतस्तस्य वशंवदत्वात्स्वेषामिवासीद्विषतामपीष्टः ।  
-सकृद्विविग्नानपि हि प्रयुक्तं माधुर्यमीष्टे हरिणान्ग्रहीतुम् ॥ १३॥  
+सकृद्विविग्नानपि हि प्रयुक्तं माधुर्यमीष्टे हरिणान्ग्रहीतुम् ॥ १३॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+वशी सुतस्तस्य वशंवदत्वात्स्वेषामिवासीद्विषतामपीष्टः ।  
+सकृद्विविग्नानपि हि प्रयुक्तं माधुर्यमीष्टे हरिणान्ग्रहीतुम् ॥ १३॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/13.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -134,9 +250,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 अहीनगुर्नाम स गां समग्रामहीनबाहुद्रविणः शशास ।  
-यो हीनसंसर्गपराङ्मुखत्वाद्युवाप्यनर्थैर्व्यसनैर्विहीनः ॥ १४॥  
+यो हीनसंसर्गपराङ्मुखत्वाद्युवाप्यनर्थैर्व्यसनैर्विहीनः ॥ १४॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+अहीनगुर्नाम स गां समग्रामहीनबाहुद्रविणः शशास ।  
+यो हीनसंसर्गपराङ्मुखत्वाद्युवाप्यनर्थैर्व्यसनैर्विहीनः ॥ १४॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/14.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -144,9 +269,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 गुरोः स चानन्तरमन्तरज्ञः पुंसां पुमानाद्य इवावतीर्णः ।  
-उपक्रमैरस्खलितैश्चतुर्भिश्चतुर्दिगीशश्चतुरो बभूव ॥ १५॥  
+उपक्रमैरस्खलितैश्चतुर्भिश्चतुर्दिगीशश्चतुरो बभूव ॥ १५॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+गुरोः स चानन्तरमन्तरज्ञः पुंसां पुमानाद्य इवावतीर्णः ।  
+उपक्रमैरस्खलितैश्चतुर्भिश्चतुर्दिगीशश्चतुरो बभूव ॥ १५॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/15.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -154,9 +288,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तस्मिन्प्रयाते परलोकयात्रां जेतर्यरीणां तनयं तदीयम् ।  
-उच्चैःशिरस्त्वाज्जितपारियात्रं लक्ष्मीः सिषेवे किल पारियात्रम् ॥ १६॥  
+उच्चैःशिरस्त्वाज्जितपारियात्रं लक्ष्मीः सिषेवे किल पारियात्रम् ॥ १६॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तस्मिन्प्रयाते परलोकयात्रां जेतर्यरीणां तनयं तदीयम् ।  
+उच्चैःशिरस्त्वाज्जितपारियात्रं लक्ष्मीः सिषेवे किल पारियात्रम् ॥ १६॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/16.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -164,9 +307,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तस्याभवत्सूनुरुदारशीलः शिलः शिलापट्टविशालवक्षाः ।  
-जितारिपक्षोऽपि शिलीमुखैर्यः शालीनतामव्रजदीड्यमानः ॥ १७॥  
+जितारिपक्षोऽपि शिलीमुखैर्यः शालीनतामव्रजदीड्यमानः ॥ १७॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तस्याभवत्सूनुरुदारशीलः शिलः शिलापट्टविशालवक्षाः ।  
+जितारिपक्षोऽपि शिलीमुखैर्यः शालीनतामव्रजदीड्यमानः ॥ १७॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/17.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -174,9 +326,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तमात्मसंपन्नमनिन्दितात्मा कृत्वा युवानं युवराजमेव ।  
-सुखानि सोऽभुङ्क्त सुखोपरोधि वृत्तं हि राज्ञामुपरुद्धवृत्तम् ॥ १८॥  
+सुखानि सोऽभुङ्क्त सुखोपरोधि वृत्तं हि राज्ञामुपरुद्धवृत्तम् ॥ १८॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तमात्मसंपन्नमनिन्दितात्मा कृत्वा युवानं युवराजमेव ।  
+सुखानि सोऽभुङ्क्त सुखोपरोधि वृत्तं हि राज्ञामुपरुद्धवृत्तम् ॥ १८॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/18.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -184,9 +345,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तं रागबन्धिष्ववितृप्तमेव भोगेषु सौभाग्यविशेषभोग्यम् ।  
-विलासिनीनामरतिक्षमाऽपि जरा वृथा मत्सरिणी जहार ॥ १९॥  
+विलासिनीनामरतिक्षमाऽपि जरा वृथा मत्सरिणी जहार ॥ १९॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तं रागबन्धिष्ववितृप्तमेव भोगेषु सौभाग्यविशेषभोग्यम् ।  
+विलासिनीनामरतिक्षमाऽपि जरा वृथा मत्सरिणी जहार ॥ १९॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/19.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -194,9 +364,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 उन्नाभ इत्युद्गतनामधेयस्तस्यायथार्थोन्नतनाभिरन्ध्रः ।  
-सुतोऽभवत्पङ्कजनाभकल्पः कृत्स्नस्य नाभिर्नृपमण्डलस्य ॥ २०॥  
+सुतोऽभवत्पङ्कजनाभकल्पः कृत्स्नस्य नाभिर्नृपमण्डलस्य ॥ २०॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+उन्नाभ इत्युद्गतनामधेयस्तस्यायथार्थोन्नतनाभिरन्ध्रः ।  
+सुतोऽभवत्पङ्कजनाभकल्पः कृत्स्नस्य नाभिर्नृपमण्डलस्य ॥ २०॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/20.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -205,8 +384,16 @@ unicode_script = "devanagari"
 </div>
 <div caption="वेदभूमिपाठः" class="audioEmbed" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga18-21-40.mp3"></div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 ततः परं वज्रधरप्रभावस्तदात्मजः संयति वज्रघोषः ।  
-बभूव वज्राकरभूषणायाः पतिः पृथिव्याः किल वज्रणाभः ॥ २१॥  
+बभूव वज्राकरभूषणायाः पतिः पृथिव्याः किल वज्रणाभः ॥ २१॥
+</details>
+<details><summary>मूलम्</summary>
+
+ततः परं वज्रधरप्रभावस्तदात्मजः संयति वज्रघोषः ।  
+बभूव वज्राकरभूषणायाः पतिः पृथिव्याः किल वज्रणाभः ॥ २१॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/21.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -214,9 +401,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तस्मिन्गते द्यां सुकृतोपलब्धां तत्संभवं शङ्खणमर्णवान्ता ।  
-उत्खातशत्रुं वसुधोपतस्थे रत्नोपहारैरुदितैः खनिभ्यः ॥ २२॥  
+उत्खातशत्रुं वसुधोपतस्थे रत्नोपहारैरुदितैः खनिभ्यः ॥ २२॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तस्मिन्गते द्यां सुकृतोपलब्धां तत्संभवं शङ्खणमर्णवान्ता ।  
+उत्खातशत्रुं वसुधोपतस्थे रत्नोपहारैरुदितैः खनिभ्यः ॥ २२॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/22.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -224,9 +420,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तस्यावसाने हरिदश्वधामा पित्र्यं प्रपेदे पदमश्विरूपः ।  
-वेलातटेषूषितसैनिकाश्वं पुराविदो यं व्युषिताश्वमाहुः ॥ २३॥  
+वेलातटेषूषितसैनिकाश्वं पुराविदो यं व्युषिताश्वमाहुः ॥ २३॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तस्यावसाने हरिदश्वधामा पित्र्यं प्रपेदे पदमश्विरूपः ।  
+वेलातटेषूषितसैनिकाश्वं पुराविदो यं व्युषिताश्वमाहुः ॥ २३॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/23.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -234,9 +439,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 आराध्य विश्वेश्वरमीश्वरेण तेन क्षितेर्विश्वसहो विजज्ञे ।  
-पातुं सहो विश्वसखः समग्रां विश्वंभरामात्मजमूर्तिरात्मा ॥ २४॥  
+पातुं सहो विश्वसखः समग्रां विश्वंभरामात्मजमूर्तिरात्मा ॥ २४॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+आराध्य विश्वेश्वरमीश्वरेण तेन क्षितेर्विश्वसहो विजज्ञे ।  
+पातुं सहो विश्वसखः समग्रां विश्वंभरामात्मजमूर्तिरात्मा ॥ २४॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/24.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -244,9 +458,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 अंशे हिरण्याक्षरिपोः स जाते हिरण्यनाभे तनये नयज्ञः ।  
-द्विषामसह्यः सुतरां तरूणां हिरण्यरेता इव सानिलोऽभूत् ॥ २५॥  
+द्विषामसह्यः सुतरां तरूणां हिरण्यरेता इव सानिलोऽभूत् ॥ २५॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+अंशे हिरण्याक्षरिपोः स जाते हिरण्यनाभे तनये नयज्ञः ।  
+द्विषामसह्यः सुतरां तरूणां हिरण्यरेता इव सानिलोऽभूत् ॥ २५॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/25.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -254,9 +477,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 पिता पितॄणामनृणस्तमन्ते वयस्यनन्तानि सुखानि लिप्सुः ।  
-राजानमाजानुविलम्बिबाहुं कृत्वा कृती वल्कलवान्बभूव ॥ २६॥  
+राजानमाजानुविलम्बिबाहुं कृत्वा कृती वल्कलवान्बभूव ॥ २६॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+पिता पितॄणामनृणस्तमन्ते वयस्यनन्तानि सुखानि लिप्सुः ।  
+राजानमाजानुविलम्बिबाहुं कृत्वा कृती वल्कलवान्बभूव ॥ २६॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/26.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -264,9 +496,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 कौसल्य इत्त्युत्तरकोसलानां पत्युः पतङ्गान्वयभूषणस्य ।  
-तस्यौरसः सोमसुतः सुतोऽभून्नेत्रोत्सवः सोम इव द्वितीयः ॥ २७॥  
+तस्यौरसः सोमसुतः सुतोऽभून्नेत्रोत्सवः सोम इव द्वितीयः ॥ २७॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+कौसल्य इत्त्युत्तरकोसलानां पत्युः पतङ्गान्वयभूषणस्य ।  
+तस्यौरसः सोमसुतः सुतोऽभून्नेत्रोत्सवः सोम इव द्वितीयः ॥ २७॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/27.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -274,9 +515,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 यशोभिराब्रह्मसभं प्रकाशः स ब्रह्मभूयं गतिमाजगाम ।  
-ब्रह्मिष्ठमाधाय निजेऽधिकारे ब्रह्मिष्ठमेव स्वतनुप्रसूतम् ॥ २८॥  
+ब्रह्मिष्ठमाधाय निजेऽधिकारे ब्रह्मिष्ठमेव स्वतनुप्रसूतम् ॥ २८॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+यशोभिराब्रह्मसभं प्रकाशः स ब्रह्मभूयं गतिमाजगाम ।  
+ब्रह्मिष्ठमाधाय निजेऽधिकारे ब्रह्मिष्ठमेव स्वतनुप्रसूतम् ॥ २८॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/28.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -284,9 +534,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तस्मिन्कुलापीडनिभे विपीडं सम्यङ्महीं शासति शासनाङ्काम् ।  
-प्रजाश्चिरं सुप्रजसि प्रजेशे ननन्दुरानन्दजलाविलाक्ष्यः ॥ २९॥  
+प्रजाश्चिरं सुप्रजसि प्रजेशे ननन्दुरानन्दजलाविलाक्ष्यः ॥ २९॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तस्मिन्कुलापीडनिभे विपीडं सम्यङ्महीं शासति शासनाङ्काम् ।  
+प्रजाश्चिरं सुप्रजसि प्रजेशे ननन्दुरानन्दजलाविलाक्ष्यः ॥ २९॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/29.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -294,9 +553,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 पात्रीकृतात्मा गुरुसेवनेन स्पष्टाकृतिः पत्ररथेन्द्रकेतोः ।  
-तं पुत्रिणां पुष्करपत्रनेत्रः पुत्रः समारोपयदग्रसंख्याम् ॥ ३०॥  
+तं पुत्रिणां पुष्करपत्रनेत्रः पुत्रः समारोपयदग्रसंख्याम् ॥ ३०॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+पात्रीकृतात्मा गुरुसेवनेन स्पष्टाकृतिः पत्ररथेन्द्रकेतोः ।  
+तं पुत्रिणां पुष्करपत्रनेत्रः पुत्रः समारोपयदग्रसंख्याम् ॥ ३०॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/30.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -304,9 +572,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 वंशस्थितिं वंशकरेण तेन संभाव्य भावी स सखा मघोनः ।  
-उपस्पृशन्स्पर्शनिवृत्तलौल्यस्त्रिपुष्करेषु त्रिदशत्वमाप ॥ ३१॥  
+उपस्पृशन्स्पर्शनिवृत्तलौल्यस्त्रिपुष्करेषु त्रिदशत्वमाप ॥ ३१॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+वंशस्थितिं वंशकरेण तेन संभाव्य भावी स सखा मघोनः ।  
+उपस्पृशन्स्पर्शनिवृत्तलौल्यस्त्रिपुष्करेषु त्रिदशत्वमाप ॥ ३१॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/31.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -314,9 +591,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तस्य प्रभानिर्जितपुष्परागं पौष्यां तिथौ पुष्यमसूत पत्नी ।  
-तस्मिन्नपुष्यन्नुदिते समग्रां पुष्टिं जनाः पुष्य इव द्वितीये ॥ ३२॥  
+तस्मिन्नपुष्यन्नुदिते समग्रां पुष्टिं जनाः पुष्य इव द्वितीये ॥ ३२॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तस्य प्रभानिर्जितपुष्परागं पौष्यां तिथौ पुष्यमसूत पत्नी ।  
+तस्मिन्नपुष्यन्नुदिते समग्रां पुष्टिं जनाः पुष्य इव द्वितीये ॥ ३२॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/32.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -324,9 +610,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 महीं महेच्छः परिकीर्य सूनौ मनीषिणे जैमिनयेऽर्पितात्मा ।  
-तस्मात्सयोगादधिगम्य योगमजन्मनेऽकल्पत जन्मभीरुः ॥ ३३॥  
+तस्मात्सयोगादधिगम्य योगमजन्मनेऽकल्पत जन्मभीरुः ॥ ३३॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+महीं महेच्छः परिकीर्य सूनौ मनीषिणे जैमिनयेऽर्पितात्मा ।  
+तस्मात्सयोगादधिगम्य योगमजन्मनेऽकल्पत जन्मभीरुः ॥ ३३॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/33.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -334,9 +629,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 ततः परं तत्प्रभवः प्रपेदे ध्रुवोपमेयो ध्रुवसंधिरुर्वीम् ।  
-यस्मिन्नभूज्ज्यायसि सत्यसंधे संधिर्ध्रुवः संनमतामरीणाम् ॥ ३४॥  
+यस्मिन्नभूज्ज्यायसि सत्यसंधे संधिर्ध्रुवः संनमतामरीणाम् ॥ ३४॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+ततः परं तत्प्रभवः प्रपेदे ध्रुवोपमेयो ध्रुवसंधिरुर्वीम् ।  
+यस्मिन्नभूज्ज्यायसि सत्यसंधे संधिर्ध्रुवः संनमतामरीणाम् ॥ ३४॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/34.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -344,9 +648,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 सुते शिशावेव सुदर्शनाख्ये दर्शात्ययेन्दुप्रियदर्शने सः ।  
-मृगायताक्षो मृगयाविहारी सिंहादवापद्विपदं नृसिंहः ॥ ३५॥  
+मृगायताक्षो मृगयाविहारी सिंहादवापद्विपदं नृसिंहः ॥ ३५॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+सुते शिशावेव सुदर्शनाख्ये दर्शात्ययेन्दुप्रियदर्शने सः ।  
+मृगायताक्षो मृगयाविहारी सिंहादवापद्विपदं नृसिंहः ॥ ३५॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/35.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -354,9 +667,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 स्वर्गामिनस्तस्य तमैकमत्यादमात्यवर्गः कुलतन्तुमेकम् ।  
-अनाथदीनाः प्रकृतीरवेक्ष्य साकेतनाथं विधिवच्चकार ॥ ३६॥  
+अनाथदीनाः प्रकृतीरवेक्ष्य साकेतनाथं विधिवच्चकार ॥ ३६॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+स्वर्गामिनस्तस्य तमैकमत्यादमात्यवर्गः कुलतन्तुमेकम् ।  
+अनाथदीनाः प्रकृतीरवेक्ष्य साकेतनाथं विधिवच्चकार ॥ ३६॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/36.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -364,9 +686,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 नवेन्दुना तन्नभसोपमेयं शावैकसिंहेन च काननेन ।  
-रघोः कुलं कुड्मलपुष्करेण तोयेन चाप्रौढनरेन्द्रमासीत् ॥ ३७॥  
+रघोः कुलं कुड्मलपुष्करेण तोयेन चाप्रौढनरेन्द्रमासीत् ॥ ३७॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+नवेन्दुना तन्नभसोपमेयं शावैकसिंहेन च काननेन ।  
+रघोः कुलं कुड्मलपुष्करेण तोयेन चाप्रौढनरेन्द्रमासीत् ॥ ३७॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/37.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -374,9 +705,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 लोकेन भावी पितुरेव तुल्यः संभावितो मौलिपरिग्रहात्सः ।  
-दृष्टो हि वृण्वन्कलभप्रमाणोऽप्याशाः पुरोवातमवाप्य मेघः ॥ ३८॥  
+दृष्टो हि वृण्वन्कलभप्रमाणोऽप्याशाः पुरोवातमवाप्य मेघः ॥ ३८॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+लोकेन भावी पितुरेव तुल्यः संभावितो मौलिपरिग्रहात्सः ।  
+दृष्टो हि वृण्वन्कलभप्रमाणोऽप्याशाः पुरोवातमवाप्य मेघः ॥ ३८॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/38.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -384,9 +724,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तं राजवीथ्यामधिहस्ति यातमाधोरणालम्बितमग्र्यवेशम् ।  
-षड्वर्षदेशीयमपि प्रभुत्वात्प्रैक्षन्त पौराः पितृगौरवेण ॥ ३९॥  
+षड्वर्षदेशीयमपि प्रभुत्वात्प्रैक्षन्त पौराः पितृगौरवेण ॥ ३९॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तं राजवीथ्यामधिहस्ति यातमाधोरणालम्बितमग्र्यवेशम् ।  
+षड्वर्षदेशीयमपि प्रभुत्वात्प्रैक्षन्त पौराः पितृगौरवेण ॥ ३९॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/39.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -394,9 +743,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 कामं न सोऽकल्पत पैतृकस्य सिंहासनस्य प्रतिपूरणाय ।  
-तेजोमहिम्ना पुनरावृतात्मा तद्व्याप चामीकरपिञ्जरेण ॥ ४०॥  
+तेजोमहिम्ना पुनरावृतात्मा तद्व्याप चामीकरपिञ्जरेण ॥ ४०॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+कामं न सोऽकल्पत पैतृकस्य सिंहासनस्य प्रतिपूरणाय ।  
+तेजोमहिम्ना पुनरावृतात्मा तद्व्याप चामीकरपिञ्जरेण ॥ ४०॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/40.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -405,8 +763,16 @@ unicode_script = "devanagari"
 </div>
 <div caption="वेदभूमिपाठः" class="audioEmbed" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga18-41-53.mp3"></div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 तस्मादधः किंचिदिवावतीर्णावसंस्पृशन्तौ तपनीयपीठम् ।  
-सालक्तकौ भूपतयः प्रसिद्धैर्ववन्दिरे मौलिभिरस्य पादौ ॥ ४१॥  
+सालक्तकौ भूपतयः प्रसिद्धैर्ववन्दिरे मौलिभिरस्य पादौ ॥ ४१॥
+</details>
+<details><summary>मूलम्</summary>
+
+तस्मादधः किंचिदिवावतीर्णावसंस्पृशन्तौ तपनीयपीठम् ।  
+सालक्तकौ भूपतयः प्रसिद्धैर्ववन्दिरे मौलिभिरस्य पादौ ॥ ४१॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/41.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -414,9 +780,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 मणौ महानील इति प्रभावादल्पप्रमाणेऽपि यथा न मिथ्या ।  
-शब्दो महाराज इति प्रतीतस्तथैव तस्मिन्युयुजेऽर्भकेऽपि ॥ ४२॥  
+शब्दो महाराज इति प्रतीतस्तथैव तस्मिन्युयुजेऽर्भकेऽपि ॥ ४२॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+मणौ महानील इति प्रभावादल्पप्रमाणेऽपि यथा न मिथ्या ।  
+शब्दो महाराज इति प्रतीतस्तथैव तस्मिन्युयुजेऽर्भकेऽपि ॥ ४२॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/42.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -424,9 +799,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 पर्यन्तसंचारितचामरस्य कपोललोलोभयकाकपक्षात् ।  
-तस्याननादुच्चरितो विवादश्चचाल वेलास्वपि नार्णवानाम् ॥ ४३॥  
+तस्याननादुच्चरितो विवादश्चचाल वेलास्वपि नार्णवानाम् ॥ ४३॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+पर्यन्तसंचारितचामरस्य कपोललोलोभयकाकपक्षात् ।  
+तस्याननादुच्चरितो विवादश्चचाल वेलास्वपि नार्णवानाम् ॥ ४३॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/43.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -434,9 +818,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 निर्वृत्तजाम्बूनदपट्टशोभे न्यस्तं ललाटे तिलकं दधानः ।  
-तेनैव शून्यान्यरिसुन्दरीणां मुखानि स स्मेरमुखश्चकार ॥ ४४॥  
+तेनैव शून्यान्यरिसुन्दरीणां मुखानि स स्मेरमुखश्चकार ॥ ४४॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+निर्वृत्तजाम्बूनदपट्टशोभे न्यस्तं ललाटे तिलकं दधानः ।  
+तेनैव शून्यान्यरिसुन्दरीणां मुखानि स स्मेरमुखश्चकार ॥ ४४॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/44.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -444,9 +837,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 शिरीषपुष्पाधिकसौकुमार्यः खेदं न यायादपि भूषणेन ।  
-नितान्तगुर्वीमपि सोऽनुभावाद्धुरं धरित्र्या बिभरांबभूव ॥ ४५॥  
+नितान्तगुर्वीमपि सोऽनुभावाद्धुरं धरित्र्या बिभरांबभूव ॥ ४५॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+शिरीषपुष्पाधिकसौकुमार्यः खेदं न यायादपि भूषणेन ।  
+नितान्तगुर्वीमपि सोऽनुभावाद्धुरं धरित्र्या बिभरांबभूव ॥ ४५॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/45.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -454,9 +856,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 न्यस्ताक्षरामक्षरभूमिकायां कार्त्स्न्येन गृह्णाति लिपिं न यावद् ।  
-सर्वाणि तावच्छ्रुतवृद्धयोगात्फलान्युपायुङ्क्त स दण्डनीतेः ॥ ४६॥  
+सर्वाणि तावच्छ्रुतवृद्धयोगात्फलान्युपायुङ्क्त स दण्डनीतेः ॥ ४६॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+न्यस्ताक्षरामक्षरभूमिकायां कार्त्स्न्येन गृह्णाति लिपिं न यावद् ।  
+सर्वाणि तावच्छ्रुतवृद्धयोगात्फलान्युपायुङ्क्त स दण्डनीतेः ॥ ४६॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/46.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -464,9 +875,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 उरस्यपर्याप्तनिवेशभागा प्रौढीभविष्यन्तमुदीक्षमाणा ।  
-संजातलज्जेव तमालपत्रच्छायाछलेनोपजुगूह लक्ष्मीः ॥ ४७॥  
+संजातलज्जेव तमालपत्रच्छायाछलेनोपजुगूह लक्ष्मीः ॥ ४७॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+उरस्यपर्याप्तनिवेशभागा प्रौढीभविष्यन्तमुदीक्षमाणा ।  
+संजातलज्जेव तमालपत्रच्छायाछलेनोपजुगूह लक्ष्मीः ॥ ४७॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/47.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -474,9 +894,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 अनश्नुवानेन युगोपमानमबद्धमौर्वीकिणलाञ्छनेन ।  
-अस्पृष्टखड्गत्सरुणापि चासीद्रक्षावती तस्य भुजेन भूमिः ॥ ४८॥  
+अस्पृष्टखड्गत्सरुणापि चासीद्रक्षावती तस्य भुजेन भूमिः ॥ ४८॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+अनश्नुवानेन युगोपमानमबद्धमौर्वीकिणलाञ्छनेन ।  
+अस्पृष्टखड्गत्सरुणापि चासीद्रक्षावती तस्य भुजेन भूमिः ॥ ४८॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/48.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -484,9 +913,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 न केवलं गच्छति तस्य काले ययुः शरीरावयवा विवृद्धिम् ।  
-वंश्या गुणाः खल्वपि लोककान्ताः प्रारम्भसूक्ष्माः प्रथिमानमापुः ॥ ४९॥  
+वंश्या गुणाः खल्वपि लोककान्ताः प्रारम्भसूक्ष्माः प्रथिमानमापुः ॥ ४९॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+न केवलं गच्छति तस्य काले ययुः शरीरावयवा विवृद्धिम् ।  
+वंश्या गुणाः खल्वपि लोककान्ताः प्रारम्भसूक्ष्माः प्रथिमानमापुः ॥ ४९॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/49.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -494,9 +932,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 स पूर्वजन्मान्तरदृष्टपाराः स्मरन्निवाक्लेशकरो गुरूणाम् ।  
-तिस्रस्त्रिवर्गाधिगमस्य मूलं जग्राह विद्याः प्रकृतीश्च पित्र्याः ॥ ५०॥  
+तिस्रस्त्रिवर्गाधिगमस्य मूलं जग्राह विद्याः प्रकृतीश्च पित्र्याः ॥ ५०॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+स पूर्वजन्मान्तरदृष्टपाराः स्मरन्निवाक्लेशकरो गुरूणाम् ।  
+तिस्रस्त्रिवर्गाधिगमस्य मूलं जग्राह विद्याः प्रकृतीश्च पित्र्याः ॥ ५०॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/50.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -504,9 +951,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 व्यूह्यः स्थितः किंचिदिवोत्तरार्धमुन्नद्धचूडोऽञ्चितसव्यजानुः ।  
-आकर्णमाकृष्टसबाणधन्वा व्यरोचतास्त्रे स विनीयमानः ॥ ५१॥  
+आकर्णमाकृष्टसबाणधन्वा व्यरोचतास्त्रे स विनीयमानः ॥ ५१॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+व्यूह्यः स्थितः किंचिदिवोत्तरार्धमुन्नद्धचूडोऽञ्चितसव्यजानुः ।  
+आकर्णमाकृष्टसबाणधन्वा व्यरोचतास्त्रे स विनीयमानः ॥ ५१॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/51.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -514,11 +970,22 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 अथ मधु वनितानां नेत्रनिर्वेशनीय-
 मनसिजतरुपुष्पं रागबन्धप्रवालम् ।  
 अकृतकविधि सर्वाङ्गीणमाकल्पजातं
-विलसितपदमाद्यं यौवनं स प्रपेदे ॥ ५२॥  
+विलसितपदमाद्यं यौवनं स प्रपेदे ॥ ५२॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+अथ मधु वनितानां नेत्रनिर्वेशनीय-
+मनसिजतरुपुष्पं रागबन्धप्रवालम् ।  
+अकृतकविधि सर्वाङ्गीणमाकल्पजातं
+विलसितपदमाद्यं यौवनं स प्रपेदे ॥ ५२॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/52.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -526,11 +993,22 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 प्रतिकृतिरचनाभ्यो दूतिसंदर्शिताभ्यः
 समधिकतररूपाः शुद्धसंतानकामैः ।  
 अधिविविदुरमात्यैराहृतास्तस्य यूनः
-प्रथमपरिगृहीते श्रीभुवौ राजकन्याः ॥ ५३॥  
+प्रथमपरिगृहीते श्रीभुवौ राजकन्याः ॥ ५३॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+प्रतिकृतिरचनाभ्यो दूतिसंदर्शिताभ्यः
+समधिकतररूपाः शुद्धसंतानकामैः ।  
+अधिविविदुरमात्यैराहृतास्तस्य यूनः
+प्रथमपरिगृहीते श्रीभुवौ राजकन्याः ॥ ५३॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/18/53.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
