--- a/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/19.md
+++ b/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/19.md
@@ -5,8 +5,16 @@ unicode_script = "devanagari"
 +++
 <div caption="वेदभूमिपाठः" class="audioEmbed" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga19-01-20.mp3"></div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 अग्निवर्णमभिषिच्य राघवः स्वे पदे तनयमग्नितेजसम् ।  
-शिश्रिये श्रुतवतामपश्चिमः पश्चिमे वयसि नैमिषं वशी ॥ १॥  
+शिश्रिये श्रुतवतामपश्चिमः पश्चिमे वयसि नैमिषं वशी ॥ १॥
+</details>
+<details><summary>मूलम्</summary>
+
+अग्निवर्णमभिषिच्य राघवः स्वे पदे तनयमग्नितेजसम् ।  
+शिश्रिये श्रुतवतामपश्चिमः पश्चिमे वयसि नैमिषं वशी ॥ १॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/01.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -14,9 +22,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तत्र तीर्थसलिलेन दीर्घिकास्तल्पमन्तरितभूमिभिः कुशैः ।  
-सौधवासमुटजेन विस्मृतः संचिकाय फलनिःस्पृहस्तपः ॥ २॥  
+सौधवासमुटजेन विस्मृतः संचिकाय फलनिःस्पृहस्तपः ॥ २॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तत्र तीर्थसलिलेन दीर्घिकास्तल्पमन्तरितभूमिभिः कुशैः ।  
+सौधवासमुटजेन विस्मृतः संचिकाय फलनिःस्पृहस्तपः ॥ २॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/02.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -24,9 +41,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 लब्धपालनविधौ न तत्सुतः खेदमाप गुरुणा हि मेदिनी ।  
-भोक्तुमेव भुजनिर्जितद्विषा न प्रसाधयितुमस्य कल्पिता ॥ ३॥  
+भोक्तुमेव भुजनिर्जितद्विषा न प्रसाधयितुमस्य कल्पिता ॥ ३॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+लब्धपालनविधौ न तत्सुतः खेदमाप गुरुणा हि मेदिनी ।  
+भोक्तुमेव भुजनिर्जितद्विषा न प्रसाधयितुमस्य कल्पिता ॥ ३॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/03.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -34,9 +60,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 सोऽधिकारमभिकः कुलोचितं काश्चन स्वयमवर्तयत्समाः ।  
-संनिवेश्य सचिवेष्वतःपरं स्त्रीविधेयनवयौवनोऽभवत् ॥ ४॥  
+संनिवेश्य सचिवेष्वतःपरं स्त्रीविधेयनवयौवनोऽभवत् ॥ ४॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+सोऽधिकारमभिकः कुलोचितं काश्चन स्वयमवर्तयत्समाः ।  
+संनिवेश्य सचिवेष्वतःपरं स्त्रीविधेयनवयौवनोऽभवत् ॥ ४॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/04.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -44,9 +79,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 कामिनीसहचरस्य कामिनस्तस्य वेश्मसु मृदङ्गनादिषु ।  
-ऋद्धिमन्तमधिकर्द्धिरुत्तरः पूर्वमुत्सवमपोहदुत्सवः ॥ ५॥  
+ऋद्धिमन्तमधिकर्द्धिरुत्तरः पूर्वमुत्सवमपोहदुत्सवः ॥ ५॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+कामिनीसहचरस्य कामिनस्तस्य वेश्मसु मृदङ्गनादिषु ।  
+ऋद्धिमन्तमधिकर्द्धिरुत्तरः पूर्वमुत्सवमपोहदुत्सवः ॥ ५॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/05.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -54,9 +98,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 इन्द्रियार्थपरिशून्यमक्षमः सोढुमेकमपि स क्षणान्तरम् ।  
-अन्तरेव विहरन्दिवानिशं न व्यपैक्षत समुत्सुकाः प्रजाः ॥ ६॥  
+अन्तरेव विहरन्दिवानिशं न व्यपैक्षत समुत्सुकाः प्रजाः ॥ ६॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+इन्द्रियार्थपरिशून्यमक्षमः सोढुमेकमपि स क्षणान्तरम् ।  
+अन्तरेव विहरन्दिवानिशं न व्यपैक्षत समुत्सुकाः प्रजाः ॥ ६॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/06.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -64,9 +117,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 गौरवाद्यदपि जातु मन्त्रिणां दर्शनं प्रकृतिकाङ्क्षितं ददौ ।  
-तद्गवाक्षविवरावलम्बिना केवलेन चरणेन कल्पितम् ॥ ७॥  
+तद्गवाक्षविवरावलम्बिना केवलेन चरणेन कल्पितम् ॥ ७॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+गौरवाद्यदपि जातु मन्त्रिणां दर्शनं प्रकृतिकाङ्क्षितं ददौ ।  
+तद्गवाक्षविवरावलम्बिना केवलेन चरणेन कल्पितम् ॥ ७॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/07.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -74,9 +136,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तं कृतप्रणतयोऽनुजीविनः कोमलात्मनखरागरूषितम् ।  
-भेजिरे नवदिवाकरातपस्पृष्टपङ्कजतुलाधिरोहणम् ॥ ८॥  
+भेजिरे नवदिवाकरातपस्पृष्टपङ्कजतुलाधिरोहणम् ॥ ८॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तं कृतप्रणतयोऽनुजीविनः कोमलात्मनखरागरूषितम् ।  
+भेजिरे नवदिवाकरातपस्पृष्टपङ्कजतुलाधिरोहणम् ॥ ८॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/08.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -84,9 +155,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 यौवनोन्नतविलासिनीस्तनक्षोभलोलकमलाश्च दीर्घिकाः ।  
-गूढमोहनगृहास्तदम्बुभिः स व्यगाहत विगाढमन्मथः ॥ ९॥  
+गूढमोहनगृहास्तदम्बुभिः स व्यगाहत विगाढमन्मथः ॥ ९॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+यौवनोन्नतविलासिनीस्तनक्षोभलोलकमलाश्च दीर्घिकाः ।  
+गूढमोहनगृहास्तदम्बुभिः स व्यगाहत विगाढमन्मथः ॥ ९॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/09.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -94,9 +174,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तत्र सेकहृतलोचनाञ्जनैर्धौतरागपरिपाटलाधरैः ।  
-अङ्गनास्तमधिकं व्यलोभयन्नर्पितप्रकृतकान्तिभिर्मुखैः ॥ १०॥  
+अङ्गनास्तमधिकं व्यलोभयन्नर्पितप्रकृतकान्तिभिर्मुखैः ॥ १०॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तत्र सेकहृतलोचनाञ्जनैर्धौतरागपरिपाटलाधरैः ।  
+अङ्गनास्तमधिकं व्यलोभयन्नर्पितप्रकृतकान्तिभिर्मुखैः ॥ १०॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/10.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -104,9 +193,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 घ्राणकान्तमधुगन्धकर्षिणीः पानभूमिरचनाः प्रियासखः ।  
-अभ्यपद्यत स वासितासखः पुष्पिताः कमलिनीरिव द्विपः ॥ ११॥  
+अभ्यपद्यत स वासितासखः पुष्पिताः कमलिनीरिव द्विपः ॥ ११॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+घ्राणकान्तमधुगन्धकर्षिणीः पानभूमिरचनाः प्रियासखः ।  
+अभ्यपद्यत स वासितासखः पुष्पिताः कमलिनीरिव द्विपः ॥ ११॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/11.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -114,9 +212,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 सातिरेकमदकारणं रहस्तेन दत्तमभिलेषुरङ्गनाः ।  
-ताभिरप्युपहृतं मुखासवं सोऽपिबद्बकुलतुल्यदोहदः ॥ १२॥  
+ताभिरप्युपहृतं मुखासवं सोऽपिबद्बकुलतुल्यदोहदः ॥ १२॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+सातिरेकमदकारणं रहस्तेन दत्तमभिलेषुरङ्गनाः ।  
+ताभिरप्युपहृतं मुखासवं सोऽपिबद्बकुलतुल्यदोहदः ॥ १२॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/12.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -124,9 +231,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 अङ्कमङ्कपरिवर्तनोचिते तस्य निन्यतुरशून्यतामुभे ।  
-वल्लकी च हृदयंगमक्षमा वल्गुवागपि च वामलोचना ॥ १३॥  
+वल्लकी च हृदयंगमक्षमा वल्गुवागपि च वामलोचना ॥ १३॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+अङ्कमङ्कपरिवर्तनोचिते तस्य निन्यतुरशून्यतामुभे ।  
+वल्लकी च हृदयंगमक्षमा वल्गुवागपि च वामलोचना ॥ १३॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/13.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -134,9 +250,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 स स्वयं प्रहतपुष्करः कृती लोलमाल्यवलयो हरन्मनः ।  
-नर्तकीरभिनयातिलङ्घिनीः पार्श्ववर्तिषु गुरुष्वलज्जयत् ॥ १४॥  
+नर्तकीरभिनयातिलङ्घिनीः पार्श्ववर्तिषु गुरुष्वलज्जयत् ॥ १४॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+स स्वयं प्रहतपुष्करः कृती लोलमाल्यवलयो हरन्मनः ।  
+नर्तकीरभिनयातिलङ्घिनीः पार्श्ववर्तिषु गुरुष्वलज्जयत् ॥ १४॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/14.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -144,9 +269,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 चारु नृत्यविगमे स तन्मुखं स्वेदभिन्नतिलकं परिश्रमात् ।  
-प्रेमदत्तवदनानिलः पिबन्नत्यजीवदमरालकेश्वरौ ॥ १५॥  
+प्रेमदत्तवदनानिलः पिबन्नत्यजीवदमरालकेश्वरौ ॥ १५॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+चारु नृत्यविगमे स तन्मुखं स्वेदभिन्नतिलकं परिश्रमात् ।  
+प्रेमदत्तवदनानिलः पिबन्नत्यजीवदमरालकेश्वरौ ॥ १५॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/15.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -154,9 +288,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तस्य सावरणदृष्टसंधयः काम्यवस्तुषु नवेषु सङ्गिनः ।  
-वल्लभाभिरुपसृत्य चक्रिरे सामिभुक्तविषयाः समागमा ॥ १६॥  
+वल्लभाभिरुपसृत्य चक्रिरे सामिभुक्तविषयाः समागमा ॥ १६॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तस्य सावरणदृष्टसंधयः काम्यवस्तुषु नवेषु सङ्गिनः ।  
+वल्लभाभिरुपसृत्य चक्रिरे सामिभुक्तविषयाः समागमा ॥ १६॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/16.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -164,9 +307,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 अङ्गुलीकिसलयाग्रतर्जनं भ्रूविभङ्गकुटिलं च वीक्षितम् ।  
-मेखलाभिरसकृच्च बन्धनं वञ्चयन्प्रणयिनीरवाप सः ॥ १७॥  
+मेखलाभिरसकृच्च बन्धनं वञ्चयन्प्रणयिनीरवाप सः ॥ १७॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+अङ्गुलीकिसलयाग्रतर्जनं भ्रूविभङ्गकुटिलं च वीक्षितम् ।  
+मेखलाभिरसकृच्च बन्धनं वञ्चयन्प्रणयिनीरवाप सः ॥ १७॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/17.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -174,9 +326,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तेन दूतिविदितं निषेदुषा पृष्ठतः सुरतवाररात्रिषु ।  
-शुश्रुवे प्रियजनस्य कातरं विप्रलम्भपरिशङ्किनो वचः ॥ १८॥  
+शुश्रुवे प्रियजनस्य कातरं विप्रलम्भपरिशङ्किनो वचः ॥ १८॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तेन दूतिविदितं निषेदुषा पृष्ठतः सुरतवाररात्रिषु ।  
+शुश्रुवे प्रियजनस्य कातरं विप्रलम्भपरिशङ्किनो वचः ॥ १८॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/18.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -184,9 +345,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 लौल्यमेत्य गृहिणीपरिग्रहान्नर्तकीष्वसुलभासु तद्वपुः ।  
-वर्तते स्म स कथंचिदालिखन्नङ्गुलीक्षरणसन्नवर्तिकः ॥ १९॥  
+वर्तते स्म स कथंचिदालिखन्नङ्गुलीक्षरणसन्नवर्तिकः ॥ १९॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+लौल्यमेत्य गृहिणीपरिग्रहान्नर्तकीष्वसुलभासु तद्वपुः ।  
+वर्तते स्म स कथंचिदालिखन्नङ्गुलीक्षरणसन्नवर्तिकः ॥ १९॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/19.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -194,9 +364,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 प्रेमगर्वितविपक्षमत्सरादायताश्च मदनान्महीक्षितम् ।  
-निन्युरुत्सवविधिच्छलेन तं देव्य उज्झितरुषः कृतार्थताम् ॥ २०॥  
+निन्युरुत्सवविधिच्छलेन तं देव्य उज्झितरुषः कृतार्थताम् ॥ २०॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+प्रेमगर्वितविपक्षमत्सरादायताश्च मदनान्महीक्षितम् ।  
+निन्युरुत्सवविधिच्छलेन तं देव्य उज्झितरुषः कृतार्थताम् ॥ २०॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/20.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -205,8 +384,16 @@ unicode_script = "devanagari"
 </div>
 <div caption="वेदभूमिपाठः" class="audioEmbed" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga19-21-40.mp3"></div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 प्रातरेत्य परिभोगशोभिना दर्शनेन कृतखण्डनव्यथाः ।  
-प्राञ्जलिः प्रणयिनीः प्रसादयन्सोऽदुनोत्प्रणयमन्थरः पुनः ॥ २१॥  
+प्राञ्जलिः प्रणयिनीः प्रसादयन्सोऽदुनोत्प्रणयमन्थरः पुनः ॥ २१॥
+</details>
+<details><summary>मूलम्</summary>
+
+प्रातरेत्य परिभोगशोभिना दर्शनेन कृतखण्डनव्यथाः ।  
+प्राञ्जलिः प्रणयिनीः प्रसादयन्सोऽदुनोत्प्रणयमन्थरः पुनः ॥ २१॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/21.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -214,9 +401,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 स्वप्नकीर्तितविपक्षमङ्गनाः प्रत्यभैत्सुरवदन्त्य एव तम् ।  
-प्रच्छदान्तगलिताश्रुबिन्दुभिः क्रोधभिन्नवलयैर्विवर्तनैः ॥ २२॥  
+प्रच्छदान्तगलिताश्रुबिन्दुभिः क्रोधभिन्नवलयैर्विवर्तनैः ॥ २२॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+स्वप्नकीर्तितविपक्षमङ्गनाः प्रत्यभैत्सुरवदन्त्य एव तम् ।  
+प्रच्छदान्तगलिताश्रुबिन्दुभिः क्रोधभिन्नवलयैर्विवर्तनैः ॥ २२॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/22.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -224,9 +420,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 कॢप्तपुष्पशयनाꣳल्लतागृहानेत्य दूतिकृतमार्गदर्शनः ।  
-अन्वभूत्परिजनाङ्गनारतं सोऽवरोधभयवेपथूत्तरम् ॥ २३॥  
+अन्वभूत्परिजनाङ्गनारतं सोऽवरोधभयवेपथूत्तरम् ॥ २३॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+कॢप्तपुष्पशयनाꣳल्लतागृहानेत्य दूतिकृतमार्गदर्शनः ।  
+अन्वभूत्परिजनाङ्गनारतं सोऽवरोधभयवेपथूत्तरम् ॥ २३॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/23.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -234,9 +439,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 नाम वल्लभजनस्य ते मया प्राप्य भाग्यमपि तस्य काङ्क्ष्यते ।  
-लोलुपं ननु मनो ममेति तं गोत्रविस्खलितमूचुरङ्गनाः ॥ २४॥  
+लोलुपं ननु मनो ममेति तं गोत्रविस्खलितमूचुरङ्गनाः ॥ २४॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+नाम वल्लभजनस्य ते मया प्राप्य भाग्यमपि तस्य काङ्क्ष्यते ।  
+लोलुपं ननु मनो ममेति तं गोत्रविस्खलितमूचुरङ्गनाः ॥ २४॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/24.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -244,9 +458,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 चूर्णबभ्रु लुलितस्रगाकुलं छिन्नमेखलमलक्तकाङ्कितम् ।  
-उत्थितस्य शयनं विलासिनस्तस्य विभ्रमरतान्यपावृणोत् ॥ २५॥  
+उत्थितस्य शयनं विलासिनस्तस्य विभ्रमरतान्यपावृणोत् ॥ २५॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+चूर्णबभ्रु लुलितस्रगाकुलं छिन्नमेखलमलक्तकाङ्कितम् ।  
+उत्थितस्य शयनं विलासिनस्तस्य विभ्रमरतान्यपावृणोत् ॥ २५॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/25.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -254,9 +477,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 स स्वयं चरणरागमादधे योषितां न च तथा समाहितः ।  
-लोभ्यमाननयनः श्लथांशुकैर्मेखलागुणपदैर्नितम्बिभिः ॥ २६॥  
+लोभ्यमाननयनः श्लथांशुकैर्मेखलागुणपदैर्नितम्बिभिः ॥ २६॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+स स्वयं चरणरागमादधे योषितां न च तथा समाहितः ।  
+लोभ्यमाननयनः श्लथांशुकैर्मेखलागुणपदैर्नितम्बिभिः ॥ २६॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/26.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -264,9 +496,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 चुम्बने विपरिवर्तिताधरं हस्तरोधि रशनाविघट्टने ।  
-विघ्नितेच्छमपि तस्य सर्वतो मन्मथेन्धनमभूद्वधूरतम् ॥ २७॥  
+विघ्नितेच्छमपि तस्य सर्वतो मन्मथेन्धनमभूद्वधूरतम् ॥ २७॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+चुम्बने विपरिवर्तिताधरं हस्तरोधि रशनाविघट्टने ।  
+विघ्नितेच्छमपि तस्य सर्वतो मन्मथेन्धनमभूद्वधूरतम् ॥ २७॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/27.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -274,9 +515,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 दर्पणेषु परिभोगदर्शिनीर्नर्मपूर्वमनुपृष्ठसंस्थितः ।  
-छायया स्मितमनोज्ञया वधूर्ह्रीनिमीलितमुखीश्चकार सः ॥ २८॥  
+छायया स्मितमनोज्ञया वधूर्ह्रीनिमीलितमुखीश्चकार सः ॥ २८॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+दर्पणेषु परिभोगदर्शिनीर्नर्मपूर्वमनुपृष्ठसंस्थितः ।  
+छायया स्मितमनोज्ञया वधूर्ह्रीनिमीलितमुखीश्चकार सः ॥ २८॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/28.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -284,9 +534,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 कण्ठसक्तमृदुबाहुबन्धनं न्यस्तपादतलमग्रपादयोः ।  
-प्रार्थयन्त शयनोत्थितं प्रियास्तं निशात्ययविसर्गचुम्बनम् ॥ २९॥  
+प्रार्थयन्त शयनोत्थितं प्रियास्तं निशात्ययविसर्गचुम्बनम् ॥ २९॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+कण्ठसक्तमृदुबाहुबन्धनं न्यस्तपादतलमग्रपादयोः ।  
+प्रार्थयन्त शयनोत्थितं प्रियास्तं निशात्ययविसर्गचुम्बनम् ॥ २९॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/29.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -294,9 +553,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 प्रेक्ष्य दर्पणतलस्थमात्मनो राजवेषमतिशक्रशोभिनम् ।  
-पिप्रिये न स तथा यथा युवा व्यक्तलक्ष्मपरिभोगमण्डनम् ॥ ३०॥  
+पिप्रिये न स तथा यथा युवा व्यक्तलक्ष्मपरिभोगमण्डनम् ॥ ३०॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+प्रेक्ष्य दर्पणतलस्थमात्मनो राजवेषमतिशक्रशोभिनम् ।  
+पिप्रिये न स तथा यथा युवा व्यक्तलक्ष्मपरिभोगमण्डनम् ॥ ३०॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/30.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -304,9 +572,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 मित्रकृत्यमपदिश्य पार्श्वतः प्रस्थितं तमनवस्थितं प्रियाः ।  
-विद्म हे शठ पलायनच्छलान्यञ्जसेति रुरुधुः कचग्रहैः ॥ ३१॥  
+विद्म हे शठ पलायनच्छलान्यञ्जसेति रुरुधुः कचग्रहैः ॥ ३१॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+मित्रकृत्यमपदिश्य पार्श्वतः प्रस्थितं तमनवस्थितं प्रियाः ।  
+विद्म हे शठ पलायनच्छलान्यञ्जसेति रुरुधुः कचग्रहैः ॥ ३१॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/31.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -314,9 +591,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तस्य निर्दयरतिश्रमालसाः कण्ठसूत्रमपदिश्य योषितः ।  
-अध्यशेरत बृहद्भुजान्तरं पीवरस्तनविलुप्तचन्दनम् ॥ ३२॥  
+अध्यशेरत बृहद्भुजान्तरं पीवरस्तनविलुप्तचन्दनम् ॥ ३२॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तस्य निर्दयरतिश्रमालसाः कण्ठसूत्रमपदिश्य योषितः ।  
+अध्यशेरत बृहद्भुजान्तरं पीवरस्तनविलुप्तचन्दनम् ॥ ३२॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/32.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -324,9 +610,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 संगमाय निशि गूढचारिणं चारदूतिकथितं पुरोगताः ।  
-वञ्चयिष्यसि कुतस्तमोवृतः कामुकेति चकृषुस्तमङ्गनाः ॥ ३३॥  
+वञ्चयिष्यसि कुतस्तमोवृतः कामुकेति चकृषुस्तमङ्गनाः ॥ ३३॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+संगमाय निशि गूढचारिणं चारदूतिकथितं पुरोगताः ।  
+वञ्चयिष्यसि कुतस्तमोवृतः कामुकेति चकृषुस्तमङ्गनाः ॥ ३३॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/33.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -334,9 +629,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 योषितामुडुपतेरिवार्चिषां स्पर्शनिवृतिमसाववाप्नुवन् ।  
-आरुरोह कुमुदाकरोपमां रात्रिजागरपरो दिवाशयः ॥ ३४॥  
+आरुरोह कुमुदाकरोपमां रात्रिजागरपरो दिवाशयः ॥ ३४॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+योषितामुडुपतेरिवार्चिषां स्पर्शनिवृतिमसाववाप्नुवन् ।  
+आरुरोह कुमुदाकरोपमां रात्रिजागरपरो दिवाशयः ॥ ३४॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/34.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -344,9 +648,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 वेणुना दशनपीडिताधरा वीणया नखपदाङ्कितोरवः ।  
-शिल्पकार्य उभयेन वेजितास्तं विजिह्मनयना व्यलोभयन् ॥ ३५॥  
+शिल्पकार्य उभयेन वेजितास्तं विजिह्मनयना व्यलोभयन् ॥ ३५॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+वेणुना दशनपीडिताधरा वीणया नखपदाङ्कितोरवः ।  
+शिल्पकार्य उभयेन वेजितास्तं विजिह्मनयना व्यलोभयन् ॥ ३५॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/35.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -354,9 +667,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 अङ्गसत्त्ववचनाश्रयं मिथः स्त्रीषु नृत्यमुपधाय दर्शयन् ।  
-स प्रयोगनिपुणैः प्रयोक्तृभिः संजघर्ष सह मित्रसंनिधौ ॥ ३६॥  
+स प्रयोगनिपुणैः प्रयोक्तृभिः संजघर्ष सह मित्रसंनिधौ ॥ ३६॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+अङ्गसत्त्ववचनाश्रयं मिथः स्त्रीषु नृत्यमुपधाय दर्शयन् ।  
+स प्रयोगनिपुणैः प्रयोक्तृभिः संजघर्ष सह मित्रसंनिधौ ॥ ३६॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/36.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -364,9 +686,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 अंसलम्बिकुटजार्जुनस्रजस्तस्य नीपरजसाङ्गरागिणः ।  
-प्रावृषि प्रमदबर्हिणेष्वभूत्कृत्रिमाद्रिषु विहारविभ्रमः ॥ ३७॥  
+प्रावृषि प्रमदबर्हिणेष्वभूत्कृत्रिमाद्रिषु विहारविभ्रमः ॥ ३७॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+अंसलम्बिकुटजार्जुनस्रजस्तस्य नीपरजसाङ्गरागिणः ।  
+प्रावृषि प्रमदबर्हिणेष्वभूत्कृत्रिमाद्रिषु विहारविभ्रमः ॥ ३७॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/37.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -374,9 +705,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 विग्रहाच्च शयने पराङ्मुखीर्नानुनेतुमबलाः स तत्वरे ।  
-आचकाङ्क्ष घनशब्दविक्लवास्ता विवृत्य विशतीर्भुजान्तरम् ॥ ३८॥  
+आचकाङ्क्ष घनशब्दविक्लवास्ता विवृत्य विशतीर्भुजान्तरम् ॥ ३८॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+विग्रहाच्च शयने पराङ्मुखीर्नानुनेतुमबलाः स तत्वरे ।  
+आचकाङ्क्ष घनशब्दविक्लवास्ता विवृत्य विशतीर्भुजान्तरम् ॥ ३८॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/38.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -384,9 +724,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 कार्तिकीषु सवितानहर्म्यभाग्यामिनीषु ललिताङ्गनासखः ।  
-अन्वभुङ्क्त सुरतश्रमापहां मेघमुक्तविशदां स चन्द्रिकाम् ॥ ३९॥  
+अन्वभुङ्क्त सुरतश्रमापहां मेघमुक्तविशदां स चन्द्रिकाम् ॥ ३९॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+कार्तिकीषु सवितानहर्म्यभाग्यामिनीषु ललिताङ्गनासखः ।  
+अन्वभुङ्क्त सुरतश्रमापहां मेघमुक्तविशदां स चन्द्रिकाम् ॥ ३९॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/39.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -394,9 +743,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 सैकतं स सरयूं विवृण्वतीं श्रोणिबिम्बमिव हंसमेखलम् ।  
-स्वप्रियाविलसितानुकारिणीं सौधजालविवरैर्व्यलोकयत् ॥ ४०॥  
+स्वप्रियाविलसितानुकारिणीं सौधजालविवरैर्व्यलोकयत् ॥ ४०॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+सैकतं स सरयूं विवृण्वतीं श्रोणिबिम्बमिव हंसमेखलम् ।  
+स्वप्रियाविलसितानुकारिणीं सौधजालविवरैर्व्यलोकयत् ॥ ४०॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/40.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -405,8 +763,16 @@ unicode_script = "devanagari"
 </div>
 <div caption="वेदभूमिपाठः" class="audioEmbed" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga19-41-57.mp3"></div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 मर्मरैरगुरुधूपगन्धिभिर्व्यक्तहेमरशनैस्तमेकतः ।  
-जह्रुराग्रथनमोक्षलोलुपं हैमनैर्निवसनैः सुमध्यमाः ॥ ४१॥  
+जह्रुराग्रथनमोक्षलोलुपं हैमनैर्निवसनैः सुमध्यमाः ॥ ४१॥
+</details>
+<details><summary>मूलम्</summary>
+
+मर्मरैरगुरुधूपगन्धिभिर्व्यक्तहेमरशनैस्तमेकतः ।  
+जह्रुराग्रथनमोक्षलोलुपं हैमनैर्निवसनैः सुमध्यमाः ॥ ४१॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/41.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -414,9 +780,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 अर्पितस्तिमितदीपदृष्टयो गर्भवेश्मसु निवातकुक्षिषु ।  
-तस्य सर्वसुरतान्तरक्षमाः साक्षितां शिशिररात्रयो ययुः ॥ ४२॥  
+तस्य सर्वसुरतान्तरक्षमाः साक्षितां शिशिररात्रयो ययुः ॥ ४२॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+अर्पितस्तिमितदीपदृष्टयो गर्भवेश्मसु निवातकुक्षिषु ।  
+तस्य सर्वसुरतान्तरक्षमाः साक्षितां शिशिररात्रयो ययुः ॥ ४२॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/42.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -424,9 +799,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 दक्षिणेन पवनेन संभृतं प्रेक्ष्य चूतकुसुमं सपल्लवम् ।  
-अन्वनैषुरवधूतविग्रहास्तं दुरुत्सहवियोगमङ्गनाः ॥ ४३॥  
+अन्वनैषुरवधूतविग्रहास्तं दुरुत्सहवियोगमङ्गनाः ॥ ४३॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+दक्षिणेन पवनेन संभृतं प्रेक्ष्य चूतकुसुमं सपल्लवम् ।  
+अन्वनैषुरवधूतविग्रहास्तं दुरुत्सहवियोगमङ्गनाः ॥ ४३॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/43.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -434,9 +818,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 ताः स्वमङ्कमधिरोप्य दोलया प्रेङ्खयन्परिजनापविद्धया ।  
-मुक्तरज्जु निबिडं भयच्छलात्कण्ठबन्धनमवाप बाहुभिः ॥ ४४॥  
+मुक्तरज्जु निबिडं भयच्छलात्कण्ठबन्धनमवाप बाहुभिः ॥ ४४॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+ताः स्वमङ्कमधिरोप्य दोलया प्रेङ्खयन्परिजनापविद्धया ।  
+मुक्तरज्जु निबिडं भयच्छलात्कण्ठबन्धनमवाप बाहुभिः ॥ ४४॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/44.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -444,9 +837,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तं पयोधरनिषिक्तचन्दनैर्मौक्तिकग्रथितचारुभूषणैः ।  
-ग्रीष्मवेषविधिभिः सिषेविरे श्रोणिलम्बिमणिमेखलैः प्रियाः ॥ ४५॥  
+ग्रीष्मवेषविधिभिः सिषेविरे श्रोणिलम्बिमणिमेखलैः प्रियाः ॥ ४५॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तं पयोधरनिषिक्तचन्दनैर्मौक्तिकग्रथितचारुभूषणैः ।  
+ग्रीष्मवेषविधिभिः सिषेविरे श्रोणिलम्बिमणिमेखलैः प्रियाः ॥ ४५॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/45.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -454,9 +856,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 यत्स लग्नसहकारमासवं रक्तपाटलसमागमं पपौ ।  
-तेन तस्य मधुनिर्गमात्कृशश्चित्तयोनिरभवत्पुनर्नवः ॥ ४६॥  
+तेन तस्य मधुनिर्गमात्कृशश्चित्तयोनिरभवत्पुनर्नवः ॥ ४६॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+यत्स लग्नसहकारमासवं रक्तपाटलसमागमं पपौ ।  
+तेन तस्य मधुनिर्गमात्कृशश्चित्तयोनिरभवत्पुनर्नवः ॥ ४६॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/46.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -464,9 +875,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 एवमिन्द्रियसुखानि निर्विशन्नन्यकार्यविमुखः स पार्थिवः ।  
-आत्मलक्षणनिवेदितानृतूनत्यवाहयदनङ्गवाहितः ॥ ४७॥  
+आत्मलक्षणनिवेदितानृतूनत्यवाहयदनङ्गवाहितः ॥ ४७॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+एवमिन्द्रियसुखानि निर्विशन्नन्यकार्यविमुखः स पार्थिवः ।  
+आत्मलक्षणनिवेदितानृतूनत्यवाहयदनङ्गवाहितः ॥ ४७॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/47.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -474,9 +894,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तं प्रमत्तमपि न प्रभावतः शेकुराक्रमितुमन्यपार्थिवाः ।  
-आमयस्तु रतिरागसंभवो दक्षशाप इव चन्द्रमक्षिणोत् ॥ ४८॥  
+आमयस्तु रतिरागसंभवो दक्षशाप इव चन्द्रमक्षिणोत् ॥ ४८॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तं प्रमत्तमपि न प्रभावतः शेकुराक्रमितुमन्यपार्थिवाः ।  
+आमयस्तु रतिरागसंभवो दक्षशाप इव चन्द्रमक्षिणोत् ॥ ४८॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/48.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -484,9 +913,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 दृष्टदोषमपि तन्न सोऽत्यजत्सङ्गवस्तु भिषजामनाश्रवः ।  
-स्वादुभिस्तु विषयैर्हृतस्ततो दुःखमिन्द्रियगणो निवार्यते ॥ ४९॥  
+स्वादुभिस्तु विषयैर्हृतस्ततो दुःखमिन्द्रियगणो निवार्यते ॥ ४९॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+दृष्टदोषमपि तन्न सोऽत्यजत्सङ्गवस्तु भिषजामनाश्रवः ।  
+स्वादुभिस्तु विषयैर्हृतस्ततो दुःखमिन्द्रियगणो निवार्यते ॥ ४९॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/49.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -494,9 +932,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तस्य पाण्डुवदनाल्पभूषणा सावलम्बगमना मृदुस्वना ।  
-राजयक्ष्मपरिहानिराययौ कामयानसमवस्थया तुलाम् ॥ ५०॥  
+राजयक्ष्मपरिहानिराययौ कामयानसमवस्थया तुलाम् ॥ ५०॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तस्य पाण्डुवदनाल्पभूषणा सावलम्बगमना मृदुस्वना ।  
+राजयक्ष्मपरिहानिराययौ कामयानसमवस्थया तुलाम् ॥ ५०॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/50.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -504,9 +951,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 व्योम पश्चिमकलास्थितेन्दु वा पङ्कशेषमिव घर्मपल्वलम् ।  
-राज्ञि तत्कुलमभूत्क्षयातुरे वामनार्चिरिव दीपभाजनम् ॥ ५१॥  
+राज्ञि तत्कुलमभूत्क्षयातुरे वामनार्चिरिव दीपभाजनम् ॥ ५१॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+व्योम पश्चिमकलास्थितेन्दु वा पङ्कशेषमिव घर्मपल्वलम् ।  
+राज्ञि तत्कुलमभूत्क्षयातुरे वामनार्चिरिव दीपभाजनम् ॥ ५१॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/51.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -514,9 +970,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 बाढमेष दिवसेषु पार्थिवः कर्म साधयति पुत्रजन्मने ।  
-इत्यदर्शितरुजोऽस्य मन्त्रिणः शश्वदूचुरघशङ्किनीः प्रजाः ॥ ५२॥  
+इत्यदर्शितरुजोऽस्य मन्त्रिणः शश्वदूचुरघशङ्किनीः प्रजाः ॥ ५२॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+बाढमेष दिवसेषु पार्थिवः कर्म साधयति पुत्रजन्मने ।  
+इत्यदर्शितरुजोऽस्य मन्त्रिणः शश्वदूचुरघशङ्किनीः प्रजाः ॥ ५२॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/52.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -524,9 +989,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 स त्वनेकवनितासखोऽपि सन्पावनीमनवलोक्य संततिम् ।  
-वैद्ययत्नपरिभाविनं गदं न प्रदीप इव वायुमत्यगात् ॥ ५३॥  
+वैद्ययत्नपरिभाविनं गदं न प्रदीप इव वायुमत्यगात् ॥ ५३॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+स त्वनेकवनितासखोऽपि सन्पावनीमनवलोक्य संततिम् ।  
+वैद्ययत्नपरिभाविनं गदं न प्रदीप इव वायुमत्यगात् ॥ ५३॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/53.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -534,9 +1008,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तं गृहोपवनएव संगताः पश्चिमक्रतुविदा पुरोधसा ।  
-रोगशान्तिमपदिश्य मन्त्रिणः संभृते शिखिनि गूढमादधुः ॥ ५४॥  
+रोगशान्तिमपदिश्य मन्त्रिणः संभृते शिखिनि गूढमादधुः ॥ ५४॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तं गृहोपवनएव संगताः पश्चिमक्रतुविदा पुरोधसा ।  
+रोगशान्तिमपदिश्य मन्त्रिणः संभृते शिखिनि गूढमादधुः ॥ ५४॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/54.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -544,9 +1027,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तैः कृतप्रकृतिमुख्यसंग्रहैराशु तस्य सहधर्मचारिणी ।  
-साधु दृष्टशुभगर्भलक्षणा प्रत्यपद्यत नराधिपश्रियम् ॥ ५५॥  
+साधु दृष्टशुभगर्भलक्षणा प्रत्यपद्यत नराधिपश्रियम् ॥ ५५॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तैः कृतप्रकृतिमुख्यसंग्रहैराशु तस्य सहधर्मचारिणी ।  
+साधु दृष्टशुभगर्भलक्षणा प्रत्यपद्यत नराधिपश्रियम् ॥ ५५॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/55.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -554,11 +1046,22 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तस्यास्तथाविधनरेन्द्रविपत्तिशोका-
 दुष्णैर्विलोचनजलैः प्रथमाभितप्तः ।  
 निर्वापितः कनककुम्भमुखोज्झितेन
-वंशाभिषेकविधिना शिशिरेण गर्भः ॥ ५६॥  
+वंशाभिषेकविधिना शिशिरेण गर्भः ॥ ५६॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तस्यास्तथाविधनरेन्द्रविपत्तिशोका-
+दुष्णैर्विलोचनजलैः प्रथमाभितप्तः ।  
+निर्वापितः कनककुम्भमुखोज्झितेन
+वंशाभिषेकविधिना शिशिरेण गर्भः ॥ ५६॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/56.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -566,11 +1069,22 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
 
 तं भावार्थं प्रसवसमयाकाङ्क्षिणीनां प्रजाना-
 मन्तर्गूढं क्षितिरिव नभोबीजमुष्टिं दधाना ।  
 मौलैः सार्धं स्थविरसचिवैर्हेमसिंहासनस्था
-राज्ञी राज्यं विधिवदशिषद्भर्तुरव्याहताज्ञा ॥ ५७॥  
+राज्ञी राज्यं विधिवदशिषद्भर्तुरव्याहताज्ञा ॥ ५७॥
+</details>
+<details><summary>मूलम्</summary>
+
+
+तं भावार्थं प्रसवसमयाकाङ्क्षिणीनां प्रजाना-
+मन्तर्गूढं क्षितिरिव नभोबीजमुष्टिं दधाना ।  
+मौलैः सार्धं स्थविरसचिवैर्हेमसिंहासनस्था
+राज्ञी राज्यं विधिवदशिषद्भर्तुरव्याहताज्ञा ॥ ५७॥
+</details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/19/57.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
